New version: 360.PalmInput version 3.2.0.1040

--- a/manifests/3/360/PalmInput/3.2.0.1040/360.PalmInput.locale.zh-CN.yaml
+++ b/manifests/3/360/PalmInput/3.2.0.1040/360.PalmInput.locale.zh-CN.yaml
@@ -2,7 +2,7 @@
 # yaml-language-server: $schema=https://aka.ms/winget-manifest.locale.1.9.0.schema.json
 
 PackageIdentifier: 360.PalmInput
-PackageVersion: 3.1.2.1000
+PackageVersion: 3.2.0.1040
 PackageLocale: zh-CN
 Publisher: 360.cn
 PublisherUrl: https://www.360.cn/
@@ -21,7 +21,8 @@ Tags:
 - 汉语
 - 输入法
 ReleaseNotes: |-
-  1. 修复已知崩溃，增强稳定性
-  - -产品理念不会改变，不用过多猜疑
+  1. 登录模块上线，支持账号、短信登录。
+  2. 实现个人词库跨端同步，提升多设备输入便捷性。
+  3. 修复已知 bug。
 ManifestType: locale
 ManifestVersion: 1.9.0
