Discard SilentWithProgress switch

--- a/manifests/o/Opera/OperaAir/116.0.5366.82/Opera.OperaAir.installer.yaml
+++ b/manifests/o/Opera/OperaAir/116.0.5366.82/Opera.OperaAir.installer.yaml
@@ -7,10 +7,11 @@ InstallerType: exe
 InstallModes:
 - interactive
 - silent
-- silentWithProgress
+# - silentWithProgress
 InstallerSwitches:
   Silent: /silent
-  SilentWithProgress: /runimmediately
+  # SilentWithProgress: /runimmediately
+  SilentWithProgress: /silent
 UpgradeBehavior: install
 Protocols:
 - http
