--- a/manifests/r/Ruihu/Apifox/2.6.49/Ruihu.Apifox.locale.en-US.yaml
+++ b/manifests/r/Ruihu/Apifox/2.6.49/Ruihu.Apifox.locale.en-US.yaml
@@ -6,7 +6,7 @@ PackageVersion: 2.6.49
 PackageLocale: en-US
 Publisher: Apifox Team
 PublisherUrl: https://apifox.com/
-PublisherSupportUrl: https://support.qq.com/products/305368
+PublisherSupportUrl: https://docs.apifox.com/
 Author: Guangzhou Ruihu Technology Co., Ltd.
 PackageName: Apifox
 PackageUrl: https://apifox.com/
@@ -29,9 +29,6 @@ Tags:
 - network
 - request
 - response
-ReleaseNotesUrl: https://apifox.com/help/app/changelog
-Documentations:
-- DocumentLabel: Documentation
-  DocumentUrl: https://apifox.com/help
+ReleaseNotesUrl: https://docs.apifox.com/doc-5807637#2649
 ManifestType: defaultLocale
 ManifestVersion: 1.9.0
