--- a/manifests/r/Ruihu/Apifox/2.6.49/Ruihu.Apifox.locale.zh-CN.yaml
+++ b/manifests/r/Ruihu/Apifox/2.6.49/Ruihu.Apifox.locale.zh-CN.yaml
@@ -6,7 +6,7 @@ PackageVersion: 2.6.49
 PackageLocale: zh-CN
 Publisher: Apifox Team
 PublisherUrl: https://apifox.com/
-PublisherSupportUrl: https://support.qq.com/products/305368
+PublisherSupportUrl: https://docs.apifox.com/
 Author: 广州睿狐科技有限公司
 PackageName: Apifox
 PackageUrl: https://apifox.com/
@@ -24,9 +24,9 @@ Tags:
 - 自动化
 - 请求
 - 调试
-ReleaseNotesUrl: https://apifox.com/help/app/changelog
-Documentations:
-- DocumentLabel: 使用文档
-  DocumentUrl: https://apifox.com/help
+ReleaseNotes: |-
+  - 🔥【新功能】调试 SSE 流式响应的 AI 大模型 接口时，Apifox 可以自动合并消息内容，以自然语言展示响应；且支持展示推理模型（比如 Deepseek R1）的思考过程
+  - 🐞 解决使用 OAuth 2.0 的 Implicit 授权模式时，给 Auth URL 配置的 Query 参数没有生效的问题
+ReleaseNotesUrl: https://docs.apifox.com/doc-5807637#2649
 ManifestType: locale
 ManifestVersion: 1.9.0
