Update manifest: IrfanSkiljan.IrfanView version 4.70
- Correction of the download URL for the x64 version of IrfanView
  - There's an extra "p" in the URL, which is not present in the x86 version.

Signed-off-by: Dragon1573 <49941141+Dragon1573@users.noreply.github.com>

--- a/manifests/i/IrfanSkiljan/IrfanView/4.70/IrfanSkiljan.IrfanView.installer.yaml
+++ b/manifests/i/IrfanSkiljan/IrfanView/4.70/IrfanSkiljan.IrfanView.installer.yaml
@@ -109,7 +109,8 @@ Installers:
   InstallerSha256: 3C7D575FEB92719934F6C8D4CA31D0DC235A91705EC24D1F8220204DA8E55729
   ProductCode: IrfanView
 - Architecture: x64
-  InstallerUrl: https://files02.tchspt.com/down/iview470_x64_setup.exe
+  # Can't sure why there's an extra "p" in the URL ...
+  InstallerUrl: https://files02.tchspt.com/down/iview470_x64_setupp.exe
   InstallerSha256: 6D5205AFE77C343AFFBD26B0FF53FDAC0219645B05B6ED35BC84C359D5E1F093
   ProductCode: IrfanView64
 ManifestType: installer
