Edit value type

--- a/manifests/n/Nota/Gyazo/5.7.1/Nota.Gyazo.installer.yaml
+++ b/manifests/n/Nota/Gyazo/5.7.1/Nota.Gyazo.installer.yaml
@@ -15,7 +15,7 @@ InstallModes:
 UpgradeBehavior: install
 AppsAndFeaturesEntries:
 - Publisher: Helpfeel Inc.
-  DisplayVersion: 5.7.1
+  DisplayVersion: '5.7.1'
   ProductCode: '{6DB8C365-E719-4BA5-9594-10DFC244D3FD}_is1'
 ElevationRequirement: elevatesSelf
 InstallationMetadata:
