--- a/manifests/z/Zoom/ZoomRooms/6.3.10/Zoom.ZoomRooms.installer.yaml
+++ b/manifests/z/Zoom/ZoomRooms/6.3.10/Zoom.ZoomRooms.installer.yaml
@@ -20,8 +20,7 @@ Installers:
     Silent: /accept_gdpr /silent
     SilentWithProgress: /accept_gdpr
     Custom: /no_autorun
-- InstallerLocale: und
-  Architecture: x64
+- Architecture: x64
   InstallerType: msi
   InstallerUrl: https://cdn.zoom.us/prod/6.3.10.5334/x64/zoomrooms-6.3.10.5334-x64.msi
   InstallerSha256: E649243E0866D78901957EAF5E96A7174FB99A35B2329192A0B4DCA36A45EEDA
