--- a/manifests/z/Zoom/ZoomRooms/6.3.10/Zoom.ZoomRooms.installer.yaml
+++ b/manifests/z/Zoom/ZoomRooms/6.3.10/Zoom.ZoomRooms.installer.yaml
@@ -20,6 +20,8 @@ Installers:
     Silent: /accept_gdpr /silent
     SilentWithProgress: /accept_gdpr
     Custom: /no_autorun
+  InstallerSuccessCodes:
+  - 1
 - Architecture: x64
   InstallerType: msi
   InstallerUrl: https://cdn.zoom.us/prod/6.3.10.5334/x64/zoomrooms-6.3.10.5334-x64.msi
