Add arm64 installer

--- a/manifests/a/AuthorMore/PenpotDesktop/0.10.0/AuthorMore.PenpotDesktop.installer.yaml
+++ b/manifests/a/AuthorMore/PenpotDesktop/0.10.0/AuthorMore.PenpotDesktop.installer.yaml
@@ -24,5 +24,20 @@ Installers:
     Custom: /allusers
   ProductCode: fce6a886-f595-5ead-8bc0-3232435b1b25
   ElevationRequirement: elevationRequired
+- Architecture: arm64
+  Scope: user
+  InstallerUrl: https://github.com/author-more/penpot-desktop/releases/download/v0.10.0/Penpot-Desktop---Setup.exe
+  InstallerSha256: 1A05FE49E28038B17DC571EF6F22A6A3821B9DA68D207A5FBF17E1E06ABDC2C2
+  InstallerSwitches:
+    Custom: /currentuser
+  ProductCode: fce6a886-f595-5ead-8bc0-3232435b1b25
+- Architecture: arm64
+  Scope: machine
+  InstallerUrl: https://github.com/author-more/penpot-desktop/releases/download/v0.10.0/Penpot-Desktop---Setup.exe
+  InstallerSha256: 1A05FE49E28038B17DC571EF6F22A6A3821B9DA68D207A5FBF17E1E06ABDC2C2
+  InstallerSwitches:
+    Custom: /allusers
+  ProductCode: fce6a886-f595-5ead-8bc0-3232435b1b25
+  ElevationRequirement: elevationRequired
 ManifestType: installer
 ManifestVersion: 1.9.0
