--- a/manifests/z/ZacharyYedidia/Eget/1.3.4/ZacharyYedidia.Eget.installer.yaml
+++ b/manifests/z/ZacharyYedidia/Eget/1.3.4/ZacharyYedidia.Eget.installer.yaml
@@ -5,14 +5,20 @@ PackageIdentifier: ZacharyYedidia.Eget
 PackageVersion: 1.3.4
 InstallerType: zip
 NestedInstallerType: portable
-NestedInstallerFiles:
-- RelativeFilePath: eget-1.3.4-windows_amd64\eget.exe
-  PortableCommandAlias: eget
 Commands:
 - eget
 ReleaseDate: 2024-06-07
 Installers:
+- Architecture: x86
+  NestedInstallerFiles:
+  - RelativeFilePath: eget-1.3.4-windows_386\eget.exe
+    PortableCommandAlias: eget
+  InstallerUrl: https://github.com/zyedidia/eget/releases/download/v1.3.4/eget-1.3.4-windows_386.zip
+  InstallerSha256: 7B8C993A663DEE00B4E46D0E562300984E041733B3C0DA97D0369E74FFC8DC04
 - Architecture: x64
+  NestedInstallerFiles:
+  - RelativeFilePath: eget-1.3.4-windows_amd64\eget.exe
+    PortableCommandAlias: eget
   InstallerUrl: https://github.com/zyedidia/eget/releases/download/v1.3.4/eget-1.3.4-windows_amd64.zip
   InstallerSha256: 27FFB63D5E2E17A829653A4C65A9412FE45FAE2BE56478167E3B89AAA8FFE899
 ManifestType: installer
