--- a/manifests/h/houseabsolute/ubi/0.5.0/houseabsolute.ubi.installer.yaml
+++ b/manifests/h/houseabsolute/ubi/0.5.0/houseabsolute.ubi.installer.yaml
@@ -15,6 +15,9 @@ Installers:
     PortableCommandAlias: ubi
   InstallerUrl: https://github.com/houseabsolute/ubi/releases/download/v0.5.0/ubi-Windows-msvc-i686.zip
   InstallerSha256: 51BFC339FBDC0514C3F35A35FD40AD5770862A18C8F62A62700F7F61718296D4
+  Dependencies:
+    PackageDependencies:
+    - PackageIdentifier: Microsoft.VCRedist.2015+.x86
 - Architecture: x64
   NestedInstallerType: portable
   NestedInstallerFiles:
@@ -22,6 +25,9 @@ Installers:
     PortableCommandAlias: ubi
   InstallerUrl: https://github.com/houseabsolute/ubi/releases/download/v0.5.0/ubi-Windows-msvc-x86_64.zip
   InstallerSha256: 137F76786DCA23801AFB4D704761CD1376D6239E107E628A1B7F89CC4E6A860D
+  Dependencies:
+    PackageDependencies:
+    - PackageIdentifier: Microsoft.VCRedist.2015+.x64
 - Architecture: arm64
   NestedInstallerType: portable
   NestedInstallerFiles:
@@ -29,5 +35,8 @@ Installers:
     PortableCommandAlias: ubi
   InstallerUrl: https://github.com/houseabsolute/ubi/releases/download/v0.5.0/ubi-Windows-msvc-arm64.zip
   InstallerSha256: C85C00577B67DBADFF85D4345C3EC21929AFCF1C78D7185E3D7CA76AE6BA65A6
+  Dependencies:
+    PackageDependencies:
+    - PackageIdentifier: Microsoft.VCRedist.2015+.arm64
 ManifestType: installer
 ManifestVersion: 1.9.0
