--- a/manifests/f/Fleet/fleetctl/4.64.0/Fleet.fleetctl.installer.yaml
+++ b/manifests/f/Fleet/fleetctl/4.64.0/Fleet.fleetctl.installer.yaml
@@ -6,14 +6,14 @@ PackageVersion: 4.64.0
 InstallerType: zip
 NestedInstallerType: portable
 NestedInstallerFiles:
-- RelativeFilePath: fleetctl_v4.64.0_windows_amd64\fleetctl.exe
+- RelativeFilePath: fleetctl_v4.64.0_windows\fleetctl.exe
   PortableCommandAlias: fleetctl
 Commands:
 - fleetctl
 ReleaseDate: 2025-02-18
 Installers:
 - Architecture: x64
-  InstallerUrl: https://github.com/fleetdm/fleet/releases/download/fleet-v4.64.0/fleetctl_v4.64.0_windows_amd64.zip
+  InstallerUrl: https://github.com/fleetdm/fleet/releases/download/fleet-v4.64.0/fleetctl_v4.64.0_windows.zip
   InstallerSha256: 4035B2A555671AC1BBE68955A93029B1DEEC8242E0EF568AEE50B91828A1C51A
 ManifestType: installer
 ManifestVersion: 1.9.0
