--- a/manifests/k/KiCad/KiCad/8.0.9/KiCad.KiCad.locale.zh-CN.yaml
+++ b/manifests/k/KiCad/KiCad/8.0.9/KiCad.KiCad.locale.zh-CN.yaml
@@ -18,7 +18,7 @@ Tags:
 - cad
 - eda
 - pcb
-ReleaseNotesUrl: https://www.kicad.org/blog/
+ReleaseNotesUrl: https://www.kicad.org/blog/2025/02/KiCad-8.0.9-Release/
 Documentations:
 - DocumentLabel: 文档
   DocumentUrl: https://docs.kicad.org/8.0/zh/
