--- a/manifests/p/PVS/AUDACTouch/2.12.2/PVS.AUDACTouch.installer.yaml
+++ b/manifests/p/PVS/AUDACTouch/2.12.2/PVS.AUDACTouch.installer.yaml
@@ -1,7 +1,7 @@
 # Created with YamlCreate.ps1 v2.4.7 $debug=NVS1.CRLF.7-5-2.Win32NT
 # yaml-language-server: $schema=https://aka.ms/winget-manifest.installer.1.10.0.schema.json
 
-PackageIdentifier: PVS.AudacTouch
+PackageIdentifier: PVS.AUDACTouch
 PackageVersion: 2.12.2
 InstallerType: nullsoft # electron-builder
 InstallerSwitches:
