--- a/manifests/g/GlennDelahoy/SnappyDriverInstallerOrigin/1.15.5.816/GlennDelahoy.SnappyDriverInstallerOrigin.locale.en-US.yaml
+++ b/manifests/g/GlennDelahoy/SnappyDriverInstallerOrigin/1.15.5.816/GlennDelahoy.SnappyDriverInstallerOrigin.locale.en-US.yaml
@@ -1,8 +1,8 @@
-# Created with komac v2.11.2
+# Created with komac v2.12.1
 # yaml-language-server: $schema=https://aka.ms/winget-manifest.defaultLocale.1.10.0.schema.json
 
 PackageIdentifier: GlennDelahoy.SnappyDriverInstallerOrigin
-PackageVersion: 1.15.4.815
+PackageVersion: 1.15.5.816
 PackageLocale: en-US
 Publisher: Glenn Delahoy
 PublisherUrl: https://www.glenn.delahoy.com/
@@ -24,6 +24,10 @@ PurchaseUrl: https://www.glenn.delahoy.com/subscribe-to-snappy-driver-installer-
 Documentations:
 - DocumentLabel: FAQs
   DocumentUrl: https://www.glenn.delahoy.com/sdio-faq/
+ReleaseNotes: |-
+  Version 1.15.5.816
+  23 June 2025
+  * Sam Driver Packs 25.06.2
 ReleaseNotesUrl: https://www.glenn.delahoy.com/downloads/sdio/changelog.txt
 ManifestType: defaultLocale
 ManifestVersion: 1.10.0
