--- a/manifests/h/HaiYing/OfficeAI/0.5.3/HaiYing.OfficeAI.locale.en-US.yaml
+++ b/manifests/h/HaiYing/OfficeAI/0.5.3/HaiYing.OfficeAI.locale.en-US.yaml
@@ -21,15 +21,7 @@ Tags:
 - large-language-model
 - llm
 - office
-ReleaseNotes: |-
-  - 校对功能支持部分应用(WPS 环境下)
-  - 续写功能支持撤销
-  - 提升 AI 排版效果
-  - 优化新增模型平台体验；
-  - 修复刷新模型后变灰不能点击的 bug;
-  - 修复新增模型平台后退出文档重新打开，新增平台看不到的 bug;
-  - 修复选中 API key 模型后，再进入设置选中模型变成别的模型的 bug;
-  - 减少 Word、Excel 提示加载慢的机率
+# ReleaseNotes:
 ReleaseNotesUrl: https://www.office-ai.cn/static/introductions/officeai/update-log.html
 Documentations:
 - DocumentLabel: Documentation
