--- a/manifests/h/HaiYing/OfficeAI/0.5.3/HaiYing.OfficeAI.locale.zh-CN.yaml
+++ b/manifests/h/HaiYing/OfficeAI/0.5.3/HaiYing.OfficeAI.locale.zh-CN.yaml
@@ -22,6 +22,13 @@ Tags:
 - 人工智能
 - 办公
 - 大语言模型
+ReleaseNotes: |-
+  - 增加 AI 导航页，支持自定义添加导航页
+  - 个人版知识库支持
+  - Qwen3 增加支持可选推理模式
+  - 排版支持西文字体
+  - 排版支持大纲目录设置和应用
+  - 修正 VBA 代码残留导致下一次任务无法执行的问题
 ReleaseNotesUrl: https://www.office-ai.cn/static/introductions/officeai/update-log.html
 Documentations:
 - DocumentLabel: 文档
