fix installer url

--- a/manifests/p/ppy/osu/2025.710.0/ppy.osu.installer.yaml
+++ b/manifests/p/ppy/osu/2025.710.0/ppy.osu.installer.yaml
@@ -23,7 +23,7 @@ AppsAndFeaturesEntries:
     Publisher: ppy Pty Ltd
 Installers:
   - Architecture: x64
-    InstallerUrl: https://github.com/ppy/osu/releases/download/2025.710.0/install.exe
+    InstallerUrl: https://github.com/ppy/osu/releases/download/2025.710.0-lazer/install.exe
     InstallerSha256: f7620fd5f3b3e1e9cd319a1d81c72d261e9c6f1b005cc8fb8775d0bb8390ac14
 ManifestType: installer
 ManifestVersion: 1.10.0
