--- a/manifests/x/xssnick/TON-Torrent/1.7.1/xssnick.TON-Torrent.installer.yaml
+++ b/manifests/x/xssnick/TON-Torrent/1.7.1/xssnick.TON-Torrent.installer.yaml
@@ -10,8 +10,7 @@ UpgradeBehavior: install
 ProductCode: TON TorrentTON Torrent
 ReleaseDate: 2025-06-25
 AppsAndFeaturesEntries:
-- DisplayVersion: 1.7.1
-  ProductCode: TON TorrentTON Torrent
+- ProductCode: TON TorrentTON Torrent
 InstallationMetadata:
   DefaultInstallLocation: '%ProgramFiles%\TON Torrent\TON Torrent'
 Installers:
