--- a/manifests/t/tibbo/ioninja/5.8.0/tibbo.ioninja.installer.yaml
+++ b/manifests/t/tibbo/ioninja/5.8.0/tibbo.ioninja.installer.yaml
@@ -16,11 +16,11 @@ InstallModes:
 UpgradeBehavior: install
 Installers:
 - Architecture: x64
-  InstallerUrl: http://tibbo.com/downloads/archive/ioninja/ioninja-5.8.0/ioninja-5.8.0-windows-amd64.msi
+  InstallerUrl: https://tibbo.com/downloads/archive/ioninja/ioninja-5.8.0/ioninja-5.8.0-windows-amd64.msi
   InstallerSha256: A994D6F1256603A69F2180F3F58608CE7331D4DE4ECB7CDA8C7BB5874EBFB257
   ProductCode: '{5CC22EAB-7AAF-4036-9BF3-C510FD9683C6}'
 - Architecture: x86
-  InstallerUrl: http://tibbo.com/downloads/archive/ioninja/ioninja-5.8.0/ioninja-5.8.0-windows-x86.msi
+  InstallerUrl: https://tibbo.com/downloads/archive/ioninja/ioninja-5.8.0/ioninja-5.8.0-windows-x86.msi
   InstallerSha256: 1CB0548E2147B3C45607665760A357A8B3FCD7A5EBF2EB2CD1EFC2CFAE0F3797
   ProductCode: '{27D8F84D-04F1-4633-95BF-3B05BCE3B53E}'
 ManifestType: installer
