--- a/manifests/c/CozyCloud/CozyDrive/Beta/4.0.0-beta.8/CozyCloud.CozyDrive.Beta.locale.en-US.yaml
+++ b/manifests/c/CozyCloud/CozyDrive/Beta/4.0.0-beta.8/CozyCloud.CozyDrive.Beta.locale.en-US.yaml
@@ -6,11 +6,11 @@ PackageVersion: 4.0.0-beta.8
 PackageLocale: en-US
 Publisher: Cozy Cloud
 PublisherUrl: https://cozy.io/en
-PublisherSupportUrl: https://cozy.io/en/support
-PrivacyUrl: https://cozy.io/en/privacy
+# PublisherSupportUrl: https://cozy.io/en/support
+# PrivacyUrl: https://cozy.io/en/privacy
 Author: Cozy Cloud
 PackageName: Cozy Drive (Beta)
-PackageUrl: https://cozy.io/en/download/#desktop
+# PackageUrl: https://cozy.io/en/download/#desktop
 License: AGPL-3.0
 LicenseUrl: https://raw.githubusercontent.com/cozy-labs/cozy-desktop/master/LICENSE
 CopyrightUrl: https://raw.githubusercontent.com/cozy-labs/cozy-desktop/master/LICENSE
