--- a/manifests/t/TaxDomeLLC/TaxDome/3.88.0.13364/TaxDomeLLC.TaxDome.locale.en-US.yaml
+++ b/manifests/t/TaxDomeLLC/TaxDome/3.88.0.13364/TaxDomeLLC.TaxDome.locale.en-US.yaml
@@ -5,15 +5,15 @@ PackageIdentifier: TaxDomeLLC.TaxDome
 PackageVersion: 3.88.0.13364
 PackageLocale: en-US
 Publisher: TaxDome LLC
-PublisherUrl: https://taxdome.com/about
-PublisherSupportUrl: https://help.taxdome.com/
-PrivacyUrl: https://taxdome.com/policies/privacy
+# PublisherUrl: https://taxdome.com/about
+# PublisherSupportUrl: https://help.taxdome.com/
+# PrivacyUrl: https://taxdome.com/policies/privacy
 PackageName: TaxDome
-PackageUrl: https://taxdome.com/desktop-app
+# PackageUrl: https://taxdome.com/desktop-app
 License: Proprietary (Terms of Service)
-LicenseUrl: https://taxdome.com/policies/tos
+# LicenseUrl: https://taxdome.com/policies/tos
 Copyright: © 2025 TaxDome
-CopyrightUrl: https://taxdome.com/about
+# CopyrightUrl: https://taxdome.com/about
 ShortDescription: TaxDome
 ManifestType: defaultLocale
 ManifestVersion: 1.10.0
