--- a/manifests/c/Cal/Cal/1.9.0/Cal.Cal.locale.zh-CN.yaml
+++ b/manifests/c/Cal/Cal/1.9.0/Cal.Cal.locale.zh-CN.yaml
@@ -4,16 +4,7 @@
 PackageIdentifier: Cal.Cal
 PackageVersion: 1.9.0
 PackageLocale: zh-CN
-Publisher: Cal
-PublisherUrl: https://cal.com/zh-CN
-PublisherSupportUrl: https://github.com/calcom/cal.com/issues
 PrivacyUrl: https://cal.com/zh-CN/privacy
-Author: Cal.com, Inc.
-PackageName: Cal
-PackageUrl: https://cal.com/zh-CN
-License: AGPL-3.0
-LicenseUrl: https://github.com/calcom/cal.com/blob/HEAD/LICENSE
-Copyright: Copyright (c) 2020-present Cal.com, Inc.
 CopyrightUrl: https://cal.com/zh-CN/terms
 ShortDescription: 适合每个人的日程安排工具。
 Tags:
@@ -31,11 +22,10 @@ Tags:
 - 时间管理
 - 清单
 - 议程
-PurchaseUrl: https://cal.com/zh-CN/pricing
 Documentations:
 - DocumentLabel: 文档
   DocumentUrl: https://cal.com/docs
 - DocumentLabel: 常见问题
-  DocumentUrl: https://cal.com/zh-CN/faq
+  DocumentUrl: https://cal.com/faq
 ManifestType: locale
 ManifestVersion: 1.10.0
