--- a/manifests/a/ADInstruments/LabChart/Module/HRV/2.0.3400/ADInstruments.LabChart.Module.HRV.locale.en-US.yaml
+++ b/manifests/a/ADInstruments/LabChart/Module/HRV/2.0.3400/ADInstruments.LabChart.Module.HRV.locale.en-US.yaml
@@ -20,7 +20,7 @@ ShortDescription: The HRV Module provides a comprehensive set of tools for the a
 # Moniker:
 # Tags:
 # ReleaseNotes:
-ReleaseNotesUrl: http://cdn.adinstruments.com/adi-web/releasenotes/HRV_2.0.3_Customer_Release_Notes.pdf
+ReleaseNotesUrl: https://cdn.adinstruments.com/adi-web/releasenotes/HRV_2.0.3_Customer_Release_Notes.pdf
 # PurchaseUrl:
 # InstallationNotes:
 # Documentations:
