Add dependency minimum version

--- a/manifests/a/ADInstruments/LabChart/Module/HRV/2.0.3400/ADInstruments.LabChart.Module.HRV.installer.yaml
+++ b/manifests/a/ADInstruments/LabChart/Module/HRV/2.0.3400/ADInstruments.LabChart.Module.HRV.installer.yaml
@@ -8,6 +8,7 @@ Scope: machine
 Dependencies:
   PackageDependencies:
   - PackageIdentifier: ADInstruments.LabChart
+    MinimumVersion: "8"
 ProductCode: '{81823B4E-F4AC-4698-8DAF-DCFB9A126959}'
 ReleaseDate: 2017-02-05
 AppsAndFeaturesEntries:
