--- a/manifests/a/ADInstruments/LabChart/Module/HRV/2.0.3400/ADInstruments.LabChart.Module.HRV.installer.yaml
+++ b/manifests/a/ADInstruments/LabChart/Module/HRV/2.0.3400/ADInstruments.LabChart.Module.HRV.installer.yaml
@@ -5,6 +5,8 @@ PackageIdentifier: ADInstruments.LabChart.Module.HRV
 PackageVersion: 2.0.3400
 InstallerType: msi
 Scope: machine
+InstallerSwitches:
+  InstallLocation: DIR_LABCHART="<INSTALLPATH>"
 Dependencies:
   PackageDependencies:
   - PackageIdentifier: ADInstruments.LabChart
