As it was, this is the right sha256 an I have validated the install

--- a/manifests/k/KnifMelti/WAU-Settings-GUI/1.7.9.3/KnifMelti.WAU-Settings-GUI.installer.yaml
+++ b/manifests/k/KnifMelti/WAU-Settings-GUI/1.7.9.3/KnifMelti.WAU-Settings-GUI.installer.yaml
@@ -15,6 +15,6 @@ Installers:
 - Architecture: x64
   InstallerUrl: https://github.com/KnifMelti/WAU-Settings-GUI/releases/download/v1.7.9.3/WAU-Settings-GUI-v1.7.9.3.zip
   InstallerSha256: f8cf08dea86df3232c6b7359e19dc4d46383b46d737980492394f5e088546418
-  ElevationRequirement: elevationRequired
+  ElevationRequirement: elevatesSelf
 ManifestType: installer
 ManifestVersion: 1.10.0
