--- a/manifests/a/ADInstruments/LabChart/Module/DMTNormalization/1.4.3400/ADInstruments.LabChart.Module.DMTNormalization.locale.en-US.yaml
+++ b/manifests/a/ADInstruments/LabChart/Module/DMTNormalization/1.4.3400/ADInstruments.LabChart.Module.DMTNormalization.locale.en-US.yaml
@@ -20,7 +20,7 @@ Description: The DMT Normalization Module provides additional functionality to L
 # Moniker:
 # Tags:
 # ReleaseNotes:
-ReleaseNotesUrl: http://cdn.adinstruments.com/adi-web/releasenotes/DMT_Normalization_1.4.3_Customer_Release_Notes.pdf
+ReleaseNotesUrl: https://cdn.adinstruments.com/adi-web/releasenotes/DMT_Normalization_1.4.3_Customer_Release_Notes.pdf
 # PurchaseUrl:
 # InstallationNotes:
 # Documentations:
