--- a/manifests/a/ADInstruments/LabChart/DeviceEnabler/CODA/1.0.6400/ADInstruments.LabChart.DeviceEnabler.CODA.locale.zh-CN.yaml
+++ b/manifests/a/ADInstruments/LabChart/DeviceEnabler/CODA/1.0.6400/ADInstruments.LabChart.DeviceEnabler.CODA.locale.zh-CN.yaml
@@ -15,9 +15,9 @@ License: 专有软件
 # LicenseUrl:
 # Copyright:
 # CopyrightUrl:
-ShortDescription: ADInstruments CODA 监测仪设备启用器是一款专为 LabChart 设计的软件插件，可使 ADInstruments CODA 监测仪将数据实时传输至 LabChart 系统。
+ShortDescription: ADInstruments CODA Monitor 设备启用器是一款专为 LabChart 设计的软件插件，可使 ADInstruments CODA Monitor 将数据实时传输至 LabChart 系统。
 Description: |-
-  ADInstruments CODA 监测仪设备启用器是一款专为 LabChart 设计的软件插件，可使 ADInstruments CODA 监测仪将数据实时传输至 LabChart 系统。
+  ADInstruments CODA Monitor 设备启用器是一款专为 LabChart 设计的软件插件，可使 ADInstruments CODA Monitor 将数据实时传输至 LabChart 系统。
   该 CODA 监测仪采用容积压力记录（VPR）传感技术，能够测量清醒或麻醉状态下小鼠/大鼠的尾部血压，并提供以下血流动力学参数：
   - 收缩压
   - 舒张压
