--- a/manifests/a/ADInstruments/LabChart/DeviceEnabler/OxfordOptronix/1.0.0400/ADInstruments.LabChart.DeviceEnabler.OxfordOptronix.locale.en-US.yaml
+++ b/manifests/a/ADInstruments/LabChart/DeviceEnabler/OxfordOptronix/1.0.0400/ADInstruments.LabChart.DeviceEnabler.OxfordOptronix.locale.en-US.yaml
@@ -31,7 +31,7 @@ Description: |-
 # Moniker:
 # Tags:
 # ReleaseNotes:
-ReleaseNotesUrl: http://cdn.adinstruments.com/adi-web/releasenotes/Oxford_Optronix_Device_Enabler_1.0_Release_Notes.pdf
+ReleaseNotesUrl: https://cdn.adinstruments.com/adi-web/releasenotes/Oxford_Optronix_Device_Enabler_1.0_Release_Notes.pdf
 # PurchaseUrl:
 # InstallationNotes:
 # Documentations:
