--- a/manifests/s/SoftwareOK/Q-Dir/12.27/SoftwareOK.Q-Dir.locale.en-US.yaml
+++ b/manifests/s/SoftwareOK/Q-Dir/12.27/SoftwareOK.Q-Dir.locale.en-US.yaml
@@ -2,7 +2,7 @@
 # yaml-language-server: $schema=https://aka.ms/winget-manifest.defaultLocale.1.10.0.schema.json
 
 PackageIdentifier: SoftwareOK.Q-Dir
-PackageVersion: "12.26"
+PackageVersion: "12.27"
 PackageLocale: en-US
 Publisher: SoftwareOK
 PublisherUrl: https://www.softwareok.com/
@@ -24,8 +24,8 @@ Tags:
 - find
 - folder
 ReleaseNotes: |-
-  - Further improvements to the Win-11 OperationStatusWindow bug
-  - General Quad Explorer improvements for all Windows OS
+  - General optimization in Q-Dir for Windows 11
+  - Language files updated in Quad Explorer
 ReleaseNotesUrl: https://www.softwareok.com/?seite=Freeware/Q-Dir/History
 Documentations:
 - DocumentLabel: Manual
