--- a/manifests/a/ADInstruments/LabChart/Module/PeakAnalysis/1.5.1400/ADInstruments.LabChart.Module.PeakAnalysis.installer.yaml
+++ b/manifests/a/ADInstruments/LabChart/Module/PeakAnalysis/1.5.1400/ADInstruments.LabChart.Module.PeakAnalysis.installer.yaml
@@ -4,6 +4,7 @@
 PackageIdentifier: ADInstruments.LabChart.Module.PeakAnalysis
 PackageVersion: 1.5.1400
 InstallerType: msi
+Scope: machine
 InstallerSwitches:
   InstallLocation: DIR_LABCHART="<INSTALLPATH>"
 Dependencies:
