--- a/manifests/a/ADInstruments/LabChart/Module/BloodPressure/1.4.0400/ADInstruments.LabChart.Module.BloodPressure.installer.yaml
+++ b/manifests/a/ADInstruments/LabChart/Module/BloodPressure/1.4.0400/ADInstruments.LabChart.Module.BloodPressure.installer.yaml
@@ -4,6 +4,7 @@
 PackageIdentifier: ADInstruments.LabChart.Module.BloodPressure
 PackageVersion: 1.4.0400
 InstallerType: msi
+Scope: machine
 InstallerSwitches:
   InstallLocation: DIR_LABCHART="<INSTALLPATH>"
 Dependencies:
