--- a/manifests/a/ADInstruments/LabChart/Module/PVLoop/2.6.0400/ADInstruments.LabChart.Module.PVLoop.installer.yaml
+++ b/manifests/a/ADInstruments/LabChart/Module/PVLoop/2.6.0400/ADInstruments.LabChart.Module.PVLoop.installer.yaml
@@ -4,6 +4,7 @@
 PackageIdentifier: ADInstruments.LabChart.Module.PVLoop
 PackageVersion: 2.6.0400
 InstallerType: msi
+Scope: machine
 InstallerSwitches:
   InstallLocation: DIR_LABCHART="<INSTALLPATH>"
 Dependencies:
