--- a/manifests/a/ADInstruments/LabChart/Module/CardiacOutput/1.3.0400/ADInstruments.LabChart.Module.CardiacOutput.installer.yaml
+++ b/manifests/a/ADInstruments/LabChart/Module/CardiacOutput/1.3.0400/ADInstruments.LabChart.Module.CardiacOutput.installer.yaml
@@ -4,6 +4,7 @@
 PackageIdentifier: ADInstruments.LabChart.Module.CardiacOutput
 PackageVersion: 1.3.0400
 InstallerType: msi
+Scope: machine
 InstallerSwitches:
   InstallLocation: DIR_LABCHART="<INSTALLPATH>"
 Dependencies:
