--- a/manifests/a/ADInstruments/LabChart/Module/SpikeHistogram/2.6.3400/ADInstruments.LabChart.Module.SpikeHistogram.installer.yaml
+++ b/manifests/a/ADInstruments/LabChart/Module/SpikeHistogram/2.6.3400/ADInstruments.LabChart.Module.SpikeHistogram.installer.yaml
@@ -4,6 +4,7 @@
 PackageIdentifier: ADInstruments.LabChart.Module.SpikeHistogram
 PackageVersion: 2.6.3400
 InstallerType: msi
+Scope: machine
 InstallerSwitches:
   InstallLocation: DIR_LABCHART="<INSTALLPATH>"
 Dependencies:
