--- a/manifests/a/ADInstruments/LabChart/Module/VideoCapture/1.2.0400/ADInstruments.LabChart.Module.VideoCapture.installer.yaml
+++ b/manifests/a/ADInstruments/LabChart/Module/VideoCapture/1.2.0400/ADInstruments.LabChart.Module.VideoCapture.installer.yaml
@@ -4,6 +4,7 @@
 PackageIdentifier: ADInstruments.LabChart.Module.VideoCapture
 PackageVersion: 1.2.0400
 InstallerType: msi
+Scope: machine
 InstallerSwitches:
   InstallLocation: DIR_LABCHART="<INSTALLPATH>"
 Dependencies:
