--- a/manifests/a/ADInstruments/LabChart/Module/ECGAnalysis/2.4.0400/ADInstruments.LabChart.Module.ECGAnalysis.installer.yaml
+++ b/manifests/a/ADInstruments/LabChart/Module/ECGAnalysis/2.4.0400/ADInstruments.LabChart.Module.ECGAnalysis.installer.yaml
@@ -4,6 +4,7 @@
 PackageIdentifier: ADInstruments.LabChart.Module.ECGAnalysis
 PackageVersion: 2.4.0400
 InstallerType: msi
+Scope: machine
 InstallerSwitches:
   InstallLocation: DIR_LABCHART="<INSTALLPATH>"
 Dependencies:
