--- a/manifests/a/ADInstruments/LabChart/Extension/CardiacAxis/1.3.0400/ADInstruments.LabChart.Extension.CardiacAxis.installer.yaml
+++ b/manifests/a/ADInstruments/LabChart/Extension/CardiacAxis/1.3.0400/ADInstruments.LabChart.Extension.CardiacAxis.installer.yaml
@@ -4,6 +4,7 @@
 PackageIdentifier: ADInstruments.LabChart.Extension.CardiacAxis
 PackageVersion: 1.3.0400
 InstallerType: msi
+Scope: machine
 InstallerSwitches:
   InstallLocation: DIR_LABCHART="<INSTALLPATH>"
 Dependencies:
