--- a/manifests/a/ADInstruments/LabChart/Extension/NICO/1.1.0400/ADInstruments.LabChart.Extension.NICO.installer.yaml
+++ b/manifests/a/ADInstruments/LabChart/Extension/NICO/1.1.0400/ADInstruments.LabChart.Extension.NICO.installer.yaml
@@ -4,6 +4,7 @@
 PackageIdentifier: ADInstruments.LabChart.Extension.NICO
 PackageVersion: 1.1.0400
 InstallerType: msi
+Scope: machine
 InstallerSwitches:
   InstallLocation: DIR_LABCHART="<INSTALLPATH>"
 Dependencies:
