--- a/manifests/a/ADInstruments/LabChart/Extension/EventManager/1.4.0400/ADInstruments.LabChart.Extension.EventManager.installer.yaml
+++ b/manifests/a/ADInstruments/LabChart/Extension/EventManager/1.4.0400/ADInstruments.LabChart.Extension.EventManager.installer.yaml
@@ -4,6 +4,7 @@
 PackageIdentifier: ADInstruments.LabChart.Extension.EventManager
 PackageVersion: 1.4.0400
 InstallerType: msi
+Scope: machine
 InstallerSwitches:
   InstallLocation: DIR_LABCHART="<INSTALLPATH>"
 Dependencies:
