--- a/manifests/a/ADInstruments/LabChart/Extension/GlucoseCalibration/1.0.1400/ADInstruments.LabChart.Extension.GlucoseCalibration.installer.yaml
+++ b/manifests/a/ADInstruments/LabChart/Extension/GlucoseCalibration/1.0.1400/ADInstruments.LabChart.Extension.GlucoseCalibration.installer.yaml
@@ -4,6 +4,7 @@
 PackageIdentifier: ADInstruments.LabChart.Extension.GlucoseCalibration
 PackageVersion: 1.0.1400
 InstallerType: msi
+Scope: machine
 InstallerSwitches:
   InstallLocation: DIR_LABCHART="<INSTALLPATH>"
 Dependencies:
