--- a/manifests/a/ADInstruments/LabChart/Extension/Scheduler/2.2.0400/ADInstruments.LabChart.Extension.Scheduler.installer.yaml
+++ b/manifests/a/ADInstruments/LabChart/Extension/Scheduler/2.2.0400/ADInstruments.LabChart.Extension.Scheduler.installer.yaml
@@ -4,6 +4,7 @@
 PackageIdentifier: ADInstruments.LabChart.Extension.Scheduler
 PackageVersion: 2.2.0400
 InstallerType: msi
+Scope: machine
 InstallerSwitches:
   InstallLocation: DIR_LABCHART="<INSTALLPATH>"
 Dependencies:
