--- a/manifests/a/ADInstruments/LabChart/Extension/Spirometry/2.5.3400/ADInstruments.LabChart.Extension.Spirometry.installer.yaml
+++ b/manifests/a/ADInstruments/LabChart/Extension/Spirometry/2.5.3400/ADInstruments.LabChart.Extension.Spirometry.installer.yaml
@@ -4,6 +4,7 @@
 PackageIdentifier: ADInstruments.LabChart.Extension.Spirometry
 PackageVersion: 2.5.3400
 InstallerType: msi
+Scope: machine
 InstallerSwitches:
   InstallLocation: DIR_LABCHART="<INSTALLPATH>"
 Dependencies:
