--- a/manifests/a/ADInstruments/LabChart/Extension/AudioOutput/2.3.0400/ADInstruments.LabChart.Extension.AudioOutput.installer.yaml
+++ b/manifests/a/ADInstruments/LabChart/Extension/AudioOutput/2.3.0400/ADInstruments.LabChart.Extension.AudioOutput.installer.yaml
@@ -4,6 +4,7 @@
 PackageIdentifier: ADInstruments.LabChart.Extension.AudioOutput
 PackageVersion: 2.3.0400
 InstallerType: msi
+Scope: machine
 InstallerSwitches:
   InstallLocation: DIR_LABCHART="<INSTALLPATH>"
 Dependencies:
