--- a/manifests/a/ADInstruments/LabChart/DeviceEnabler/TrignoWireless/1.3.6400/ADInstruments.LabChart.DeviceEnabler.TrignoWireless.installer.yaml
+++ b/manifests/a/ADInstruments/LabChart/DeviceEnabler/TrignoWireless/1.3.6400/ADInstruments.LabChart.DeviceEnabler.TrignoWireless.installer.yaml
@@ -4,6 +4,7 @@
 PackageIdentifier: ADInstruments.LabChart.DeviceEnabler.TrignoWireless
 PackageVersion: 1.3.6400
 InstallerType: msi
+Scope: machine
 InstallerSwitches:
   InstallLocation: DIR_LABCHART="<INSTALLPATH>"
 Dependencies:
