--- a/manifests/a/ADInstruments/LabChart/DeviceEnabler/Kent/1.2.5400/ADInstruments.LabChart.DeviceEnabler.Kent.installer.yaml
+++ b/manifests/a/ADInstruments/LabChart/DeviceEnabler/Kent/1.2.5400/ADInstruments.LabChart.DeviceEnabler.Kent.installer.yaml
@@ -4,6 +4,7 @@
 PackageIdentifier: ADInstruments.LabChart.DeviceEnabler.Kent
 PackageVersion: 1.2.5400
 InstallerType: msi
+Scope: machine
 InstallerSwitches:
   InstallLocation: DIR_LABCHART="<INSTALLPATH>"
 Dependencies:
