--- a/manifests/a/ADInstruments/LabChart/DeviceEnabler/WiiBalanceBoard/1.1.0400/ADInstruments.LabChart.DeviceEnabler.WiiBalanceBoard.installer.yaml
+++ b/manifests/a/ADInstruments/LabChart/DeviceEnabler/WiiBalanceBoard/1.1.0400/ADInstruments.LabChart.DeviceEnabler.WiiBalanceBoard.installer.yaml
@@ -4,6 +4,7 @@
 PackageIdentifier: ADInstruments.LabChart.DeviceEnabler.WiiBalanceBoard
 PackageVersion: 1.1.0400
 InstallerType: msi
+Scope: machine
 InstallerSwitches:
   InstallLocation: DIR_LABCHART="<INSTALLPATH>"
 Dependencies:
