--- a/manifests/a/ADInstruments/LabChart/DeviceEnabler/Equivital/1.2.1400/ADInstruments.LabChart.DeviceEnabler.Equivital.installer.yaml
+++ b/manifests/a/ADInstruments/LabChart/DeviceEnabler/Equivital/1.2.1400/ADInstruments.LabChart.DeviceEnabler.Equivital.installer.yaml
@@ -4,6 +4,7 @@
 PackageIdentifier: ADInstruments.LabChart.DeviceEnabler.Equivital
 PackageVersion: 1.2.1400
 InstallerType: msi
+Scope: machine
 InstallerSwitches:
   InstallLocation: DIR_LABCHART="<INSTALLPATH>"
 Dependencies:
