--- a/manifests/a/ADInstruments/LabChart/DeviceEnabler/HumanNIBP/2.0.8400/ADInstruments.LabChart.DeviceEnabler.HumanNIBP.installer.yaml
+++ b/manifests/a/ADInstruments/LabChart/DeviceEnabler/HumanNIBP/2.0.8400/ADInstruments.LabChart.DeviceEnabler.HumanNIBP.installer.yaml
@@ -4,6 +4,7 @@
 PackageIdentifier: ADInstruments.LabChart.DeviceEnabler.HumanNIBP
 PackageVersion: 2.0.8400
 InstallerType: msi
+Scope: machine
 InstallerSwitches:
   InstallLocation: DIR_LABCHART="<INSTALLPATH>"
 Dependencies:
