--- a/manifests/a/ADInstruments/LabChart/DeviceEnabler/PlaybackFile/1.2.2400/ADInstruments.LabChart.DeviceEnabler.PlaybackFile.installer.yaml
+++ b/manifests/a/ADInstruments/LabChart/DeviceEnabler/PlaybackFile/1.2.2400/ADInstruments.LabChart.DeviceEnabler.PlaybackFile.installer.yaml
@@ -4,6 +4,7 @@
 PackageIdentifier: ADInstruments.LabChart.DeviceEnabler.PlaybackFile
 PackageVersion: 1.2.2400
 InstallerType: msi
+Scope: machine
 InstallerSwitches:
   InstallLocation: DIR_LABCHART="<INSTALLPATH>"
 Dependencies:
