--- a/manifests/a/ADInstruments/LabChart/DeviceEnabler/OxfordOptronix/1.0.0400/ADInstruments.LabChart.DeviceEnabler.OxfordOptronix.installer.yaml
+++ b/manifests/a/ADInstruments/LabChart/DeviceEnabler/OxfordOptronix/1.0.0400/ADInstruments.LabChart.DeviceEnabler.OxfordOptronix.installer.yaml
@@ -4,6 +4,7 @@
 PackageIdentifier: ADInstruments.LabChart.DeviceEnabler.OxfordOptronix
 PackageVersion: 1.0.0400
 InstallerType: msi
+Scope: machine
 InstallerSwitches:
   InstallLocation: DIR_LABCHART="<INSTALLPATH>"
 Dependencies:
