--- a/manifests/a/ADInstruments/LabChart/DeviceEnabler/CODA/1.0.6400/ADInstruments.LabChart.DeviceEnabler.CODA.installer.yaml
+++ b/manifests/a/ADInstruments/LabChart/DeviceEnabler/CODA/1.0.6400/ADInstruments.LabChart.DeviceEnabler.CODA.installer.yaml
@@ -4,6 +4,7 @@
 PackageIdentifier: ADInstruments.LabChart.DeviceEnabler.CODA
 PackageVersion: 1.0.6400
 InstallerType: msi
+Scope: machine
 InstallerSwitches:
   InstallLocation: DIR_LABCHART="<INSTALLPATH>"
 Dependencies:
