--- a/manifests/d/DMT/DMTDriverPackage/1.5.1/DMT.DMTDriverPackage.locale.zh-CN.yaml
+++ b/manifests/d/DMT/DMTDriverPackage/1.5.1/DMT.DMTDriverPackage.locale.zh-CN.yaml
@@ -1,7 +1,7 @@
 # Created with YamlCreate.ps1 v2.4.7 $debug=NVS1.CRLF.7-5-2.Win32NT
 # yaml-language-server: $schema=https://aka.ms/winget-manifest.locale.1.10.0.schema.json
 
-PackageIdentifier: DMT.DriverPackage
+PackageIdentifier: DMT.DMTDriverPackage
 PackageVersion: 1.5.1
 PackageLocale: zh-CN
 # Publisher:
