--- a/manifests/d/DMT/MyoPULL/2.0.10.0/DMT.MyoPULL.locale.en-US.yaml
+++ b/manifests/d/DMT/MyoPULL/2.0.10.0/DMT.MyoPULL.locale.en-US.yaml
@@ -10,7 +10,7 @@ PublisherSupportUrl: https://www.dmt.dk/contact.html
 PrivacyUrl: https://www.dmt.dk/privacy.html
 Author: Danish Myo Technology A/S
 PackageName: MyoPULL
-PackageUrl: https://www.dmt.dk/myoview.html
+PackageUrl: https://www.dmt.dk/software-downloads.html
 License: Proprietary
 LicenseUrl: https://www.dmt.dk/software_license.html
 Copyright: Copyright (C) 2024 Danish Myo Technology
