--- a/manifests/d/DMT/MyoPULSE/3.1.13/DMT.MyoPULSE.locale.en-US.yaml
+++ b/manifests/d/DMT/MyoPULSE/3.1.13/DMT.MyoPULSE.locale.en-US.yaml
@@ -9,7 +9,7 @@ PublisherUrl: https://www.dmt.dk/
 PublisherSupportUrl: https://www.dmt.dk/contact.html
 PrivacyUrl: https://www.dmt.dk/privacy.html
 Author: Danish Myo Technology A/S
-PackageName: MyoPULL
+PackageName: MyoPULSE
 PackageUrl: https://www.dmt.dk/myopulse.html
 License: Proprietary
 LicenseUrl: https://www.dmt.dk/software_license.html
