--- a/manifests/k/KDE/KTimeTracker/6.0.0/KDE.KTimeTracker.locale.en-US.yaml
+++ b/manifests/k/KDE/KTimeTracker/6.0.0/KDE.KTimeTracker.locale.en-US.yaml
@@ -11,8 +11,8 @@ PrivacyUrl: https://kde.org/privacypolicy/
 Author: KDE e.V.
 PackageName: KTimeTracker
 PackageUrl: https://apps.kde.org/ktimetracker/
-License: GPL-3.0-or-later
-LicenseUrl: https://invent.kde.org/pim/merkuro/-/blob/HEAD/LICENSES/GPL-3.0-or-later.txt
+License: GPL-2.0
+LicenseUrl: https://invent.kde.org/pim/ktimetracker/-/blob/HEAD/LICENSES/GPL-2.0-or-later.txt
 # Copyright:
 # CopyrightUrl:
 ShortDescription: Personal Time Tracker
