--- a/manifests/9/99designs/aws-vault/7.1.2/99designs.aws-vault.en-US.yaml
+++ b/manifests/9/99designs/aws-vault/7.1.2/99designs.aws-vault.en-US.yaml
@@ -3,7 +3,7 @@ PackageIdentifier: 99designs.aws-vault
 PackageVersion: 7.1.2
 PackageLocale: en-US
 Publisher: 99designs
-PublisherUrl: https://github.com/99designs/aws-vault
+PublisherUrl: https://github.com/99designs
 PublisherSupportUrl: https://github.com/99designs/aws-vault/issues
 PackageName: aws-vault
 PackageUrl: https://github.com/99designs/aws-vault
