New version: SoftwareOK.DirPrintOK version 7.41

--- a/manifests/s/SoftwareOK/DirPrintOK/7.41/SoftwareOK.DirPrintOK.locale.en-US.yaml
+++ b/manifests/s/SoftwareOK/DirPrintOK/7.41/SoftwareOK.DirPrintOK.locale.en-US.yaml
@@ -2,7 +2,7 @@
 # yaml-language-server: $schema=https://aka.ms/winget-manifest.defaultLocale.1.10.0.schema.json
 
 PackageIdentifier: SoftwareOK.DirPrintOK
-PackageVersion: "7.37"
+PackageVersion: "7.41"
 PackageLocale: en-US
 Publisher: SoftwareOK
 PublisherUrl: https://www.softwareok.com/
@@ -20,9 +20,8 @@ Tags:
 - directory
 - folder
 ReleaseNotes: |-
-  - Various fixes and adjustments in Windows 11.
-  - Improvements: in printing and print preview of the file list.
-  - Language files updated in the directory printing application.
+  - General optimization in DirPrintOK for Windows 11
+  - Language files updated in DirPrintOK
 ReleaseNotesUrl: https://www.softwareok.com/?seite=Freeware/DirPrintOK/History
 Documentations:
 - DocumentLabel: Manual
