--- a/manifests/k/KDE/KMahjongg/25.04.3/KDE.KMahjongg.installer.yaml
+++ b/manifests/k/KDE/KMahjongg/25.04.3/KDE.KMahjongg.installer.yaml
@@ -2,7 +2,7 @@
 # yaml-language-server: $schema=https://aka.ms/winget-manifest.installer.1.10.0.schema.json
 
 PackageIdentifier: KDE.KMahjongg
-PackageVersion: master
+PackageVersion: 25.04.3
 InstallerType: nullsoft
 UpgradeBehavior: install
 ProductCode: kmahjongg
