--- a/manifests/k/KDE/KMahjongg/25.04.3/KDE.KMahjongg.locale.en-US.yaml
+++ b/manifests/k/KDE/KMahjongg/25.04.3/KDE.KMahjongg.locale.en-US.yaml
@@ -2,7 +2,7 @@
 # yaml-language-server: $schema=https://aka.ms/winget-manifest.defaultLocale.1.10.0.schema.json
 
 PackageIdentifier: KDE.KMahjongg
-PackageVersion: master
+PackageVersion: 25.04.3
 PackageLocale: en-US
 Publisher: KDE e.V.
 PublisherUrl: https://kde.org/
