--- a/manifests/k/KDE/KMahjongg/25.04.3/KDE.KMahjongg.locale.zh-CN.yaml
+++ b/manifests/k/KDE/KMahjongg/25.04.3/KDE.KMahjongg.locale.zh-CN.yaml
@@ -2,7 +2,7 @@
 # yaml-language-server: $schema=https://aka.ms/winget-manifest.locale.1.10.0.schema.json
 
 PackageIdentifier: KDE.KMahjongg
-PackageVersion: master
+PackageVersion: 25.04.3
 PackageLocale: zh-CN
 # Publisher:
 PublisherUrl: https://kde.org/zh-cn/
