--- a/manifests/k/KDE/KReversi/master/KDE.KReversi.locale.en-US.yaml
+++ b/manifests/k/KDE/KReversi/master/KDE.KReversi.locale.en-US.yaml
@@ -20,6 +20,7 @@ Description: KReversi is a simple one player strategy game played against the co
 # Moniker:
 Tags:
 - game
+- reversi
 # ReleaseNotes:
 # ReleaseNotesUrl:
 # PurchaseUrl:
