--- a/manifests/v/voidtools/Everything/1.4.1.1026/voidtools.Everything.installer.yaml
+++ b/manifests/v/voidtools/Everything/1.4.1.1026/voidtools.Everything.installer.yaml
@@ -1,35 +1,41 @@
-# Created with YamlCreate.ps1 v2.4.1 Dumplings Mod $debug=QUSU.CRLF.7-4-3.Win32NT
-# yaml-language-server: $schema=https://aka.ms/winget-manifest.installer.1.6.0.schema.json
+# Created with komac v2.12.1
+# yaml-language-server: $schema=https://aka.ms/winget-manifest.installer.1.10.0.schema.json
 
 PackageIdentifier: voidtools.Everything
 PackageVersion: 1.4.1.1026
+InstallerLocale: en-US
+InstallerType: wix
 Scope: machine
+InstallModes:
+- interactive
+- silent
+- silentWithProgress
 UpgradeBehavior: install
 FileExtensions:
 - efu
-ReleaseDate: 2024-08-01
+ReleaseDate: 2025-06-27
 Installers:
 - Architecture: x86
-  InstallerType: wix
-  InstallerUrl: https://www.voidtools.com/Everything-1.4.1.1026.x86.msi
-  InstallerSha256: D4427930EAA6A1FD10F2F8600011E2FA6C3E1A44339A5F24B5208354BDCA2946
-  InstallerSwitches:
-    InstallLocation: INSTALLDIR="<INSTALLPATH>"
-  ProductCode: '{CBF0D022-6169-457C-A432-404DE0473C87}'
+  InstallerUrl: https://www.voidtools.com/Everything-1.4.1.1028.x86.msi
+  InstallerSha256: 2AD01132415A4B6442F13344E80FEA851BBB38041E2D56E8FDFF0218B40A873E
+  ProductCode: '{D9E8FDEB-33BD-4E2D-AC54-A536AD876BBC}'
+  AppsAndFeaturesEntries:
+  - DisplayName: Everything 1.4.1.1028 (x86)
+    DisplayVersion: 1.4.1.1028
+    ProductCode: '{D9E8FDEB-33BD-4E2D-AC54-A536AD876BBC}'
+    UpgradeCode: '{CD735285-B21D-412F-B5B7-E61D8F3BC672}'
+  InstallationMetadata:
+    DefaultInstallLocation: '%ProgramFiles(x86)%\Everything'
 - Architecture: x64
-  InstallerType: wix
-  InstallerUrl: https://www.voidtools.com/Everything-1.4.1.1026.x64.msi
-  InstallerSha256: EBB176103DD1B13C4AE7B4CA83CAF03334A6A1FB32CE09B4E2214E5941028626
-  InstallerSwitches:
-    InstallLocation: INSTALLDIR="<INSTALLPATH>"
-  ProductCode: '{819FBD81-19AA-4346-895C-1AA178E652B5}'
-- Architecture: x86
-  InstallerType: nullsoft
-  InstallerUrl: https://www.voidtools.com/Everything-1.4.1.1026.x86-Setup.exe
-  InstallerSha256: BBF249AB7D4EA4B17A56D2EFFCD0DF563BF4D5CD4F6E00EBF5E74A74CA0034E2
-- Architecture: x64
-  InstallerType: nullsoft
-  InstallerUrl: https://www.voidtools.com/Everything-1.4.1.1026.x64-Setup.exe
-  InstallerSha256: DAE32A49B6052F0EC70895DD4E35B2B26222F7F4C19C36D9D309033E2FB622BC
+  InstallerUrl: https://www.voidtools.com/Everything-1.4.1.1028.x64.msi
+  InstallerSha256: EF9DC58BAF3045CC02ADC533CF8AE52E0F7BE6E069332A6160CA0AAE79631443
+  ProductCode: '{37CAAB9A-D072-46CB-947A-0751F1E390B3}'
+  AppsAndFeaturesEntries:
+  - DisplayName: Everything 1.4.1.1028 (x64)
+    DisplayVersion: 1.4.1.1028
+    ProductCode: '{37CAAB9A-D072-46CB-947A-0751F1E390B3}'
+    UpgradeCode: '{429071B2-0162-45AA-84AD-28F047E15638}'
+  InstallationMetadata:
+    DefaultInstallLocation: '%ProgramFiles%\Everything'
 ManifestType: installer
-ManifestVersion: 1.6.0
+ManifestVersion: 1.10.0
