--- a/manifests/v/voidtools/Everything/1.4.1.1026/voidtools.Everything.locale.en-US.yaml
+++ b/manifests/v/voidtools/Everything/1.4.1.1026/voidtools.Everything.locale.en-US.yaml
@@ -1,5 +1,5 @@
-# Created with YamlCreate.ps1 v2.4.1 Dumplings Mod $debug=QUSU.CRLF.7-4-3.Win32NT
-# yaml-language-server: $schema=https://aka.ms/winget-manifest.defaultLocale.1.6.0.schema.json
+# Created with komac v2.12.1
+# yaml-language-server: $schema=https://aka.ms/winget-manifest.defaultLocale.1.10.0.schema.json
 
 PackageIdentifier: voidtools.Everything
 PackageVersion: 1.4.1.1026
@@ -7,32 +7,13 @@ PackageLocale: en-US
 Publisher: voidtools
 PublisherUrl: https://www.voidtools.com/
 PublisherSupportUrl: https://www.voidtools.com/support/everything/
-PrivacyUrl: https://www.voidtools.com/privacy
 Author: David Carpenter
 PackageName: Everything
 PackageUrl: https://www.voidtools.com/
 License: MIT
 LicenseUrl: https://www.voidtools.com/License.txt
-Copyright: Copyright © 2024 voidtools
-# CopyrightUrl:
+Copyright: Copyright © 2025 voidtools
 ShortDescription: Locate files and folders by name instantly.
-Description: Everything is search engine that locates files and folders by filename instantly for Windows. Unlike Windows search Everything initially displays every file and folder on your computer (hence the name Everything). You type in a search filter to limit what files and folders are displayed.
-Moniker: everything
-Tags:
-- directory
-- file
-- file-search
-- filesystem
-- find
-- folder
-- indexing
-- search
-ReleaseNotes: updated localization.
-ReleaseNotesUrl: https://www.voidtools.com/Changes.txt
-# PurchaseUrl:
-# InstallationNotes:
-Documentations:
-- DocumentLabel: FAQ
-  DocumentUrl: https://www.voidtools.com/faq/
+Description: Everything is search engine that locates files and folders by filename instantly for Windows. Unlike Windows search Everything initially displays every file and folder on your computer (hence the na.
 ManifestType: defaultLocale
-ManifestVersion: 1.6.0
+ManifestVersion: 1.10.0
