--- a/manifests/v/voidtools/Everything/1.4.1.1026/voidtools.Everything.locale.zh-CN.yaml
+++ b/manifests/v/voidtools/Everything/1.4.1.1026/voidtools.Everything.locale.zh-CN.yaml
@@ -1,5 +1,5 @@
-# Created with YamlCreate.ps1 v2.4.1 Dumplings Mod $debug=QUSU.CRLF.7-4-3.Win32NT
-# yaml-language-server: $schema=https://aka.ms/winget-manifest.locale.1.6.0.schema.json
+# Created with komac v2.12.1
+# yaml-language-server: $schema=https://aka.ms/winget-manifest.locale.1.10.0.schema.json
 
 PackageIdentifier: voidtools.Everything
 PackageVersion: 1.4.1.1026
@@ -14,10 +14,8 @@ PackageUrl: https://www.voidtools.com/zh-cn/
 License: MIT
 LicenseUrl: https://www.voidtools.com/zh-cn/License.txt
 Copyright: Copyright © 2024 voidtools
-# CopyrightUrl:
 ShortDescription: 基于名称快速定位文件和文件夹。
 Description: “Everything”是 Windows 上一款搜索引擎，它能够基于文件名快速定文件和文件夹位置。不像 Windows 内置搜索，“Everything”默认显示电脑上每个文件和文件夹（就如其名“Everything”）。您在搜索框输入的关键词将会筛选显示的文件和文件夹。
-# Moniker:
 Tags:
 - 搜索
 - 文件
@@ -27,10 +25,7 @@ Tags:
 - 查找
 - 目录
 - 索引
-# ReleaseNotes:
 ReleaseNotesUrl: https://www.voidtools.com/Changes.txt
-# PurchaseUrl:
-# InstallationNotes:
 Documentations:
 - DocumentLabel: 常见问题
   DocumentUrl: https://www.voidtools.com/zh-cn/faq/
