Update: RARLab.WinRAR version 7.12.0 (7.12)

--- a/manifests/r/RARLab/WinRAR/7.12.0/RARLab.WinRAR.installer.yaml
+++ b/manifests/r/RARLab/WinRAR/7.12.0/RARLab.WinRAR.installer.yaml
@@ -129,6 +129,10 @@ Installers:
   Architecture: x64
   InstallerUrl: https://www.rarlab.com/rar/winrar-x64-712jp.exe
   InstallerSha256: 425500A328583A678138FE0AF843985DCCC78613194E6B772C1708B357B2CB02
+- InstallerLocale: ko
+  Architecture: x64
+  InstallerUrl: https://www.rarlab.com/rar/winrar-x64-712kr.exe
+  InstallerSha256: AFB69F126BF5E7A96D877A0ED1001DE51F72C4FC78519A8561A4353C841CD106
 - InstallerLocale: lt
   Architecture: x64
   InstallerUrl: https://www.rarlab.com/rar/winrar-x64-712lt.exe
@@ -185,5 +189,9 @@ Installers:
   Architecture: x64
   InstallerUrl: https://www.rarlab.com/rar/winrar-x64-712uk.exe
   InstallerSha256: E2367795C4ADBCCF23AB8E32844D82265E9F98D12D374FD4DB146498D650AA6F
+- InstallerLocale: vi
+  Architecture: x64
+  InstallerUrl: https://www.rarlab.com/rar/winrar-x64-712vn.exe
+  InstallerSha256: CE12490549B63520A5C93FB18A5717053C8023BA6D17C7DC59A6CE76F3BFCEB2
 ManifestType: installer
 ManifestVersion: 1.10.0
