New version: TRUSTSING.iDefender version 5.0.2.0

--- a/manifests/t/TRUSTSING/iDefender/5.0.2.0/TRUSTSING.iDefender.locale.en-US.yaml
+++ b/manifests/t/TRUSTSING/iDefender/5.0.2.0/TRUSTSING.iDefender.locale.en-US.yaml
@@ -2,7 +2,7 @@
 # yaml-language-server: $schema=https://aka.ms/winget-manifest.defaultLocale.1.10.0.schema.json
 
 PackageIdentifier: TRUSTSING.iDefender
-PackageVersion: 5.0.1.0
+PackageVersion: 5.0.2.0
 PackageLocale: en-US
 Publisher: iMonitorSDK
 PublisherUrl: https://trustsing.com/
@@ -20,6 +20,6 @@ Description: |-
 Tags:
 - hips
 - security
-ReleaseNotesUrl: https://trustsing.com/idefender/
+ReleaseNotesUrl: https://trustsing.com/idefender/#_5-0-2-0
 ManifestType: defaultLocale
 ManifestVersion: 1.10.0
