--- a/manifests/t/TRUSTSING/iDefender/5.0.2.0/TRUSTSING.iDefender.locale.zh-CN.yaml
+++ b/manifests/t/TRUSTSING/iDefender/5.0.2.0/TRUSTSING.iDefender.locale.zh-CN.yaml
@@ -2,7 +2,7 @@
 # yaml-language-server: $schema=https://aka.ms/winget-manifest.locale.1.10.0.schema.json
 
 PackageIdentifier: TRUSTSING.iDefender
-PackageVersion: 5.0.1.0
+PackageVersion: 5.0.2.0
 PackageLocale: zh-CN
 Publisher: iMonitorSDK
 PublisherUrl: https://trustsing.com/
@@ -16,6 +16,10 @@ Description: 冰盾 · 主动防御系统【专业不流氓】是一款使用 iM
 Tags:
 - hips
 - 安全
-ReleaseNotesUrl: https://trustsing.com/idefender/
+ReleaseNotes: |-
+  - 修复内置规则拦截系统还原的问题
+  - 修复内置规则拦截 PIN 登录的问题
+  - 添加最新银狐的白加黑检测支持
+ReleaseNotesUrl: https://trustsing.com/idefender/#_5-0-2-0
 ManifestType: locale
 ManifestVersion: 1.10.0
