--- a/manifests/r/RubyInstallerTeam/RubyWithDevKit/3/4/3.4.4-2/RubyInstallerTeam.RubyWithDevKit.3.4.installer.yaml
+++ b/manifests/r/RubyInstallerTeam/RubyWithDevKit/3/4/3.4.4-2/RubyInstallerTeam.RubyWithDevKit.3.4.installer.yaml
@@ -20,6 +20,8 @@ Installers:
   InstallerSwitches:
     Custom: /CURRENTUSER
   ProductCode: RubyInstaller-3.4-i386-mingw32_is1
+  AppsAndFeaturesEntries:
+  - DisplayName: Ruby 3.4.4-2-x86
 - Architecture: x86
   Scope: machine
   InstallerUrl: https://github.com/oneclick/rubyinstaller2/releases/download/RubyInstaller-3.4.4-2/rubyinstaller-devkit-3.4.4-2-x86.exe
@@ -27,6 +29,8 @@ Installers:
   InstallerSwitches:
     Custom: /ALLUSERS
   ProductCode: RubyInstaller-3.4-i386-mingw32_is1
+  AppsAndFeaturesEntries:
+  - DisplayName: Ruby 3.4.4-2-x86
 - Architecture: x64
   Scope: user
   InstallerUrl: https://github.com/oneclick/rubyinstaller2/releases/download/RubyInstaller-3.4.4-2/rubyinstaller-devkit-3.4.4-2-x64.exe
@@ -34,6 +38,8 @@ Installers:
   InstallerSwitches:
     Custom: /CURRENTUSER
   ProductCode: RubyInstaller-3.4-x64-mingw-ucrt_is1
+  AppsAndFeaturesEntries:
+  - DisplayName: Ruby 3.4.4-2-x64
 - Architecture: x64
   Scope: machine
   InstallerUrl: https://github.com/oneclick/rubyinstaller2/releases/download/RubyInstaller-3.4.4-2/rubyinstaller-devkit-3.4.4-2-x64.exe
@@ -41,6 +47,8 @@ Installers:
   InstallerSwitches:
     Custom: /ALLUSERS
   ProductCode: RubyInstaller-3.4-x64-mingw-ucrt_is1
+  AppsAndFeaturesEntries:
+  - DisplayName: Ruby 3.4.4-2-x64
 - Architecture: arm64
   Scope: user
   InstallerUrl: https://github.com/oneclick/rubyinstaller2/releases/download/RubyInstaller-3.4.4-2/rubyinstaller-devkit-3.4.4-2-arm.exe
@@ -48,6 +56,8 @@ Installers:
   InstallerSwitches:
     Custom: /CURRENTUSER
   ProductCode: RubyInstaller-3.4-aarch64-mingw-ucrt
+  AppsAndFeaturesEntries:
+  - DisplayName: Ruby 3.4.4-2-arm
 - Architecture: arm64
   Scope: machine
   InstallerUrl: https://github.com/oneclick/rubyinstaller2/releases/download/RubyInstaller-3.4.4-2/rubyinstaller-devkit-3.4.4-2-arm.exe
@@ -55,5 +65,7 @@ Installers:
   InstallerSwitches:
     Custom: /ALLUSERS
   ProductCode: RubyInstaller-3.4-aarch64-mingw-ucrt
+  AppsAndFeaturesEntries:
+  - DisplayName: Ruby 3.4.4-2-arm
 ManifestType: installer
 ManifestVersion: 1.10.0
