--- a/manifests/r/RubyInstallerTeam/RubyWithDevKit/3/2/3.2.8-1/RubyInstallerTeam.RubyWithDevKit.3.2.locale.en-US.yaml
+++ b/manifests/r/RubyInstallerTeam/RubyWithDevKit/3/2/3.2.8-1/RubyInstallerTeam.RubyWithDevKit.3.2.locale.en-US.yaml
@@ -7,7 +7,7 @@ PackageLocale: en-US
 Publisher: RubyInstaller Team
 PublisherUrl: https://rubyinstaller.org/
 PublisherSupportUrl: https://github.com/oneclick/rubyinstaller2/issues
-PackageName: Ruby 3.2 with Devkit
+PackageName: Ruby 3.2 with MSYS2
 PackageUrl: https://rubyinstaller.org/downloads/
 License: BSD-3-Clause
 LicenseUrl: https://github.com/oneclick/rubyinstaller2/blob/HEAD/LICENSE.txt
