--- a/manifests/r/RubyInstallerTeam/RubyWithDevKit/3/1/3.1.7-1/RubyInstallerTeam.RubyWithDevKit.3.1.installer.yaml
+++ b/manifests/r/RubyInstallerTeam/RubyWithDevKit/3/1/3.1.7-1/RubyInstallerTeam.RubyWithDevKit.3.1.installer.yaml
@@ -19,12 +19,12 @@ Installers:
   InstallerSha256: A708B8E644F3AF55FE9080B783FA7E519EF0BB0714907BD095C46575CDB1162D
   ProductCode: RubyInstaller-3.1-i386-mingw32_is1
   AppsAndFeaturesEntries:
-  - DisplayName: Ruby 3.1.7-1-x86
+  - DisplayName: Ruby 3.1.7-1-x86-msvcrt with MSYS2
 - Architecture: x64
   InstallerUrl: https://github.com/oneclick/rubyinstaller2/releases/download/RubyInstaller-3.1.7-1/rubyinstaller-devkit-3.1.7-1-x64.exe
   InstallerSha256: C643BF00680AA21F20B34587AA0613E9970D9B63ADAEF2C0228925A7F9CDFC7A
   ProductCode: RubyInstaller-3.1-x64-mingw-ucrt_is1
   AppsAndFeaturesEntries:
-  - DisplayName: Ruby 3.1.7-1-x64
+  - DisplayName: Ruby 3.1.7-1-x64-ucrt with MSYS2
 ManifestType: installer
 ManifestVersion: 1.10.0
