--- a/manifests/r/RubyInstallerTeam/RubyWithDevKit/3/4/3.4.4-2/RubyInstallerTeam.RubyWithDevKit.3.4.installer.yaml
+++ b/manifests/r/RubyInstallerTeam/RubyWithDevKit/3/4/3.4.4-2/RubyInstallerTeam.RubyWithDevKit.3.4.installer.yaml
@@ -55,7 +55,7 @@ Installers:
   InstallerSha256: 27C293184E4349897F85DF2DEBBC8DDFB41C0F18DC57C5927888D1A2BB9D9E59
   InstallerSwitches:
     Custom: /CURRENTUSER
-  ProductCode: RubyInstaller-3.4-aarch64-mingw-ucrt
+  ProductCode: RubyInstaller-3.4-aarch64-mingw-ucrt_is1
   AppsAndFeaturesEntries:
   - DisplayName: Ruby 3.4.4-2-arm
 - Architecture: arm64
@@ -64,7 +64,7 @@ Installers:
   InstallerSha256: 27C293184E4349897F85DF2DEBBC8DDFB41C0F18DC57C5927888D1A2BB9D9E59
   InstallerSwitches:
     Custom: /ALLUSERS
-  ProductCode: RubyInstaller-3.4-aarch64-mingw-ucrt
+  ProductCode: RubyInstaller-3.4-aarch64-mingw-ucrt_is1
   AppsAndFeaturesEntries:
   - DisplayName: Ruby 3.4.4-2-arm
 ManifestType: installer
