--- a/manifests/g/Google/AndroidStudio/2025.1.1.13/Google.AndroidStudio.locale.en-US.yaml
+++ b/manifests/g/Google/AndroidStudio/2025.1.1.13/Google.AndroidStudio.locale.en-US.yaml
@@ -34,6 +34,7 @@ Tags:
 - ide
 - intellij
 - studio
+ReleaseNotesUrl: https://androidstudio.googleblog.com/
 Documentations:
 - DocumentLabel: Known Issues
   DocumentUrl: https://developer.android.com/studio/known-issues
