--- a/manifests/r/RubyInstallerTeam/Ruby/3/0/3.0.7-1/RubyInstallerTeam.Ruby.3.0.installer.yaml
+++ b/manifests/r/RubyInstallerTeam/Ruby/3/0/3.0.7-1/RubyInstallerTeam.Ruby.3.0.installer.yaml
@@ -27,7 +27,7 @@ Installers:
   InstallerUrl: https://github.com/oneclick/rubyinstaller2/releases/download/RubyInstaller-3.0.7-1/rubyinstaller-3.0.7-1-x86.exe
   InstallerSha256: CF33CCAA7499293F42ED7381CA39E663EE750B93A591AB6B99C7194F0601ADFA
   InstallerSwitches:
-    Custom: /AllUsers
+    Custom: /ALLUSERS
   ProductCode: RubyInstaller-3.0-i386-mingw32_is1
   AppsAndFeaturesEntries:
   - DisplayName: Ruby 3.0.7-1-x86
@@ -45,7 +45,7 @@ Installers:
   InstallerUrl: https://github.com/oneclick/rubyinstaller2/releases/download/RubyInstaller-3.0.7-1/rubyinstaller-3.0.7-1-x64.exe
   InstallerSha256: 70D65997E17B7DFDB995BDFCF3E39FBEBEBC3B35FB440FEA2003DB046B3E87A1
   InstallerSwitches:
-    Custom: /AllUsers
+    Custom: /ALLUSERS
   ProductCode: RubyInstaller-3.0-x64-mingw_is1
   AppsAndFeaturesEntries:
   - DisplayName: Ruby 3.0.7-1-x64
