--- a/manifests/r/RubyInstallerTeam/Ruby/3/2/3.2.8-1/RubyInstallerTeam.Ruby.3.2.installer.yaml
+++ b/manifests/r/RubyInstallerTeam/Ruby/3/2/3.2.8-1/RubyInstallerTeam.Ruby.3.2.installer.yaml
@@ -27,7 +27,7 @@ Installers:
   InstallerUrl: https://github.com/oneclick/rubyinstaller2/releases/download/RubyInstaller-3.2.8-1/rubyinstaller-3.2.8-1-x86.exe
   InstallerSha256: D170BF21E38B10CE540B85BF56A2034D69EE37ED293B74AB3FD1AEF0F21B4D3F
   InstallerSwitches:
-    Custom: /AllUsers
+    Custom: /ALLUSERS
   ProductCode: RubyInstaller-3.2-i386-mingw32_is1
   AppsAndFeaturesEntries:
   - DisplayName: Ruby 3.2.8-1-x86
@@ -45,7 +45,7 @@ Installers:
   InstallerUrl: https://github.com/oneclick/rubyinstaller2/releases/download/RubyInstaller-3.2.8-1/rubyinstaller-3.2.8-1-x64.exe
   InstallerSha256: C531EBFE8733A26AE6271A07C5E4B848262CF688F44C13C10126B22188469B2C
   InstallerSwitches:
-    Custom: /AllUsers
+    Custom: /ALLUSERS
   ProductCode: RubyInstaller-3.2-x64-mingw-ucrt_is1
   AppsAndFeaturesEntries:
   - DisplayName: Ruby 3.2.8-1-x64
