--- a/manifests/r/RubyInstallerTeam/Ruby/3/4/3.4.4-2/RubyInstallerTeam.Ruby.3.4.installer.yaml
+++ b/manifests/r/RubyInstallerTeam/Ruby/3/4/3.4.4-2/RubyInstallerTeam.Ruby.3.4.installer.yaml
@@ -27,7 +27,7 @@ Installers:
   InstallerUrl: https://github.com/oneclick/rubyinstaller2/releases/download/RubyInstaller-3.4.4-2/rubyinstaller-3.4.4-2-x86.exe
   InstallerSha256: 812BA978E85C5016728568A74990C3C7C8F511E3E53BF593D3A19A10BDEB6A82
   InstallerSwitches:
-    Custom: /AllUsers
+    Custom: /ALLUSERS
   ProductCode: RubyInstaller-3.4-i386-mingw32_is1
   AppsAndFeaturesEntries:
   - DisplayName: Ruby 3.4.4-2-x86
@@ -45,7 +45,7 @@ Installers:
   InstallerUrl: https://github.com/oneclick/rubyinstaller2/releases/download/RubyInstaller-3.4.4-2/rubyinstaller-3.4.4-2-x64.exe
   InstallerSha256: 9DB09BEB692D3925CDD62040B05E14805CD14444A229D38B7CB0BF1A525C132A
   InstallerSwitches:
-    Custom: /AllUsers
+    Custom: /ALLUSERS
   ProductCode: RubyInstaller-3.4-x64-mingw-ucrt_is1
   AppsAndFeaturesEntries:
   - DisplayName: Ruby 3.4.4-2-x64
@@ -63,7 +63,7 @@ Installers:
   InstallerUrl: https://github.com/oneclick/rubyinstaller2/releases/download/RubyInstaller-3.4.4-2/rubyinstaller-3.4.4-2-arm.exe
   InstallerSha256: 1FF0F14B5DDCCC4CB70966E51A224D6D7FE15041DF6C03BE431F353DE1FB7E9A
   InstallerSwitches:
-    Custom: /AllUsers
+    Custom: /ALLUSERS
   ProductCode: RubyInstaller-3.4-aarch64-mingw-ucrt_is1
   AppsAndFeaturesEntries:
   - DisplayName: Ruby 3.4.4-2-arm
