--- a/manifests/e/Ethersphere/Swarm-Desktop/0.49.0/Ethersphere.Swarm-Desktop.locale.en-US.yaml
+++ b/manifests/e/Ethersphere/Swarm-Desktop/0.49.0/Ethersphere.Swarm-Desktop.locale.en-US.yaml
@@ -8,7 +8,7 @@ Publisher: Swarm Association
 PublisherUrl: https://www.ethswarm.org/
 PublisherSupportUrl: https://github.com/ethersphere/swarm-desktop/issues
 Author: Ethersphere
-PackageName: Desktop client for running and managing bee
+PackageName: Swarm Desktop
 PackageUrl: https://www.ethswarm.org/build/desktop
 License: BSD-3-Clause
 LicenseUrl: https://raw.githubusercontent.com/ethersphere/swarm-desktop/refs/heads/master/LICENSE
