--- a/manifests/e/Ethersphere/Swarm-Desktop/0.49.0/Ethersphere.Swarm-Desktop.installer.yaml
+++ b/manifests/e/Ethersphere/Swarm-Desktop/0.49.0/Ethersphere.Swarm-Desktop.installer.yaml
@@ -9,6 +9,8 @@ InstallerSwitches:
   SilentWithProgress: -silent
 UpgradeBehavior: install
 ReleaseDate: 2025-03-12
+ProductCode: swarm-desktop
+Scope: user
 Installers:
 - Architecture: x86
   InstallerUrl: https://github.com/ethersphere/swarm-desktop/releases/download/v0.49.0/Swarm.Desktop-0.49.0.Setup.exe
