--- a/manifests/l/LEGO/WeDo/1.9.385/LEGO.WeDo.installer.yaml
+++ b/manifests/l/LEGO/WeDo/1.9.385/LEGO.WeDo.installer.yaml
@@ -12,5 +12,9 @@ Installers:
 - Architecture: x86
   InstallerUrl: https://assets.education.lego.com/_/downloads/WeDo2_Full_1.9.385_Global_WIN10.exe
   InstallerSha256: 9972649B45441335C8F61F9AEE083D32884665E6ABE01A0A48778A26BC865771
+- InstallerLocale: zh-CN
+  Architecture: x86
+  InstallerUrl: https://legoeducation.cn/_/downloads/WeDo2_Full_1.9.385_Global_WIN10.exe
+  InstallerSha256: 9972649B45441335C8F61F9AEE083D32884665E6ABE01A0A48778A26BC865771
 ManifestType: installer
 ManifestVersion: 1.10.0
