--- a/manifests/l/LEGO/WeDo/1.9.385/LEGO.WeDo.installer.yaml
+++ b/manifests/l/LEGO/WeDo/1.9.385/LEGO.WeDo.installer.yaml
@@ -10,7 +10,7 @@ FileExtensions:
 ProductCode: '{55D378FA-8979-4A05-8D26-A34FBF2104EF}_is1'
 Installers:
 - Architecture: x86
-  InstallerUrl: https://assets.education.lego.com/_/downloads/WeDo2_Full_1.9.385_Global_WIN10.exe
+  InstallerUrl: https://education.lego.com/_/downloads/WeDo2_Full_1.9.385_Global_WIN10.exe
   InstallerSha256: 9972649B45441335C8F61F9AEE083D32884665E6ABE01A0A48778A26BC865771
 - InstallerLocale: zh-CN
   Architecture: x86
