--- a/manifests/s/StructuredData/BERTTookit/2.4.4/StructuredData.BERTTookit.installer.yaml
+++ b/manifests/s/StructuredData/BERTTookit/2.4.4/StructuredData.BERTTookit.installer.yaml
@@ -6,6 +6,7 @@ PackageVersion: 2.4.4
 InstallerType: nullsoft
 Scope: user
 ProductCode: BERT2
+ReleaseDate: 2018-06-15
 Installers:
 - Architecture: x64
   InstallerUrl: https://github.com/sdllc/Basic-Excel-R-Toolkit/releases/download/2.4.4/BERT-Installer-2.4.4.exe
