--- a/manifests/d/Datacomp/BIMvision/3.0.3/Datacomp.BIMvision.installer.yaml
+++ b/manifests/d/Datacomp/BIMvision/3.0.3/Datacomp.BIMvision.installer.yaml
@@ -17,5 +17,8 @@ Installers:
 - Architecture: x86
   InstallerUrl: https://download-datacomp.com.pl/bimvision/setup/BIMvision%203.0.3%20Setup.exe
   InstallerSha256: 65198AA27724C2EFC843E4B79DFC7060F70A04942913529BF813CACBEED3E90E
+- Architecture: x64
+  InstallerUrl: https://download-datacomp.com.pl/bimvision/setup/BIMvision%203.0.3%20Setup.exe
+  InstallerSha256: 65198AA27724C2EFC843E4B79DFC7060F70A04942913529BF813CACBEED3E90E
 ManifestType: installer
 ManifestVersion: 1.10.0
