--- a/manifests/m/Microsoft/PIX/2507.11/Microsoft.PIX.installer.yaml
+++ b/manifests/m/Microsoft/PIX/2507.11/Microsoft.PIX.installer.yaml
@@ -10,20 +10,20 @@ FileExtensions:
 - pix3
 - wpix
 ReleaseDate: 2025-07-11
-AppsAndFeaturesEntries:
-- DisplayVersion: 25.7.11.1
 Installers:
 - Architecture: x64
   InstallerUrl: https://download.microsoft.com/download/71e1a77f-3c92-4b78-aab0-f36f9b1ecfdd/PIX-2507.11-Installer-x64.exe
   InstallerSha256: 54752A70771A34829375B09D283E9E7DE6EED54BBC8E7BF48E2C594791B5B518
   ProductCode: '{346d1b33-2f87-4e67-830e-4881b35613dc}'
   AppsAndFeaturesEntries:
-  - UpgradeCode: '{330B0B72-F93F-4A59-B3CA-1B84AB2A16E3}'
+  - DisplayVersion: 25.7.11.1
+    UpgradeCode: '{330B0B72-F93F-4A59-B3CA-1B84AB2A16E3}'
 - Architecture: arm64
   InstallerUrl: https://download.microsoft.com/download/71e1a77f-3c92-4b78-aab0-f36f9b1ecfdd/PIX-2507.11-Installer-ARM64.exe
   InstallerSha256: 7994092954C8E2B9DB83CB92BAB2F8ABA1BFD7AEFCD280CCF7DE4DFBAFE76972
   ProductCode: '{061ea61a-5713-42d6-b4ac-ecafb254b899}'
   AppsAndFeaturesEntries:
-  - UpgradeCode: '{980607DF-7837-4BCA-B064-A9C62831E8B2}'
+  - DisplayVersion: 25.7.11.1
+    UpgradeCode: '{980607DF-7837-4BCA-B064-A9C62831E8B2}'
 ManifestType: installer
 ManifestVersion: 1.10.0
