--- a/manifests/b/BioSilico/IdeaMapper/K12/4.2.0004/BioSilico.IdeaMapper.K12.locale.en-US.yaml
+++ b/manifests/b/BioSilico/IdeaMapper/K12/4.2.0004/BioSilico.IdeaMapper.K12.locale.en-US.yaml
@@ -18,7 +18,11 @@ CopyrightUrl: https://www.biosilico.com/wp-content/uploads/2023/12/End-User-Agre
 ShortDescription: ideamapper is a powerful mind mapping, visual learning, and writing tool designed to produce well-structured documents.
 # Description:
 # Moniker:
-# Tags:
+Tags:
+- mind-map
+- mind-mapping
+- mindmap
+- writing
 ReleaseNotes: |-
   What’s New?
   - Further improvements to accessibility support (user interface, keyboard shortcuts, tooltips).
