--- a/manifests/b/BioSilico/IdeaMapper/K12/4.2.0004/BioSilico.IdeaMapper.K12.locale.zh-CN.yaml
+++ b/manifests/b/BioSilico/IdeaMapper/K12/4.2.0004/BioSilico.IdeaMapper.K12.locale.zh-CN.yaml
@@ -18,7 +18,10 @@ License: 专有软件
 ShortDescription: ideamapper 是一款功能强大的思维导图、可视化学习及写作工具，旨在帮助用户生成结构清晰的文档。
 # Description:
 # Moniker:
-# Tags:
+Tags:
+- 写作
+- 思维导图
+- 脑图
 # ReleaseNotes:
 # ReleaseNotesUrl:
 # PurchaseUrl:
