--- a/manifests/b/BioSilico/IdeaMapper/K12/4.2.0004/BioSilico.IdeaMapper.K12.installer.yaml
+++ b/manifests/b/BioSilico/IdeaMapper/K12/4.2.0004/BioSilico.IdeaMapper.K12.installer.yaml
@@ -67,6 +67,7 @@ FileExtensions:
 ProductCode: '{4883CF09-1582-4656-ABBC-424FC88F6CBB}'
 AppsAndFeaturesEntries:
 - UpgradeCode: '{C60465A6-F6AF-42A7-97D5-C047D022EDA3}'
+  InstallerType: msi
 Installers:
 - Architecture: x64
   InstallerUrl: https://download.ideamapperk12.com/4.2.0004/windows/setup_ideamapperk12_4_2_0004.exe
