--- a/manifests/b/BioSilico/IdeaMapper/HigherEd/4.2.0004/BioSilico.IdeaMapper.HigherEd.installer.yaml
+++ b/manifests/b/BioSilico/IdeaMapper/HigherEd/4.2.0004/BioSilico.IdeaMapper.HigherEd.installer.yaml
@@ -67,6 +67,7 @@ FileExtensions:
 ProductCode: '{B2A5433F-3B96-417D-8E3A-3A5CEBA1BB66}'
 AppsAndFeaturesEntries:
 - UpgradeCode: '{213219D3-CEB5-4EA1-B902-053C6E12F8CA}'
+  InstallerType: msi
 Installers:
 - Architecture: x64
   InstallerUrl: https://download.ideamapperhighered.com/4.2.0004/windows/setup_ideamapperhighered_4_2_0004.exe
