--- a/manifests/b/BioSilico/IdeaMapper/Pro/4.2.0004/BioSilico.IdeaMapper.Pro.installer.yaml
+++ b/manifests/b/BioSilico/IdeaMapper/Pro/4.2.0004/BioSilico.IdeaMapper.Pro.installer.yaml
@@ -67,6 +67,7 @@ FileExtensions:
 ProductCode: '{696AE75A-2A20-41D8-BB9E-3BE6F5ED093F}'
 AppsAndFeaturesEntries:
 - UpgradeCode: '{A121DC0A-6593-4B82-8A44-FAD58D813227}'
+  InstallerType: msi
 Installers:
 - Architecture: x64
   InstallerUrl: https://download.ideamapperpro.com/4.2.0004/windows/setup_ideamapperpro_4_2_0004.exe
