--- a/manifests/b/BioSilico/IdeaMapper/4.2.0004/BioSilico.IdeaMapper.installer.yaml
+++ b/manifests/b/BioSilico/IdeaMapper/4.2.0004/BioSilico.IdeaMapper.installer.yaml
@@ -67,6 +67,7 @@ FileExtensions:
 ProductCode: '{15294FFD-2EA0-4C76-90A7-A38BEEF24559}'
 AppsAndFeaturesEntries:
 - UpgradeCode: '{A959A9CB-A369-4B6F-873D-FDF97F76CCEF}'
+  InstallerType: msi
 Installers:
 - Architecture: x64
   InstallerUrl: https://download.ideamapper.com/4.2.0004/windows/setup_ideamapper_4_2_0004.exe
