--- a/manifests/e/Esko/CapePack/25.1.6/Esko.CapePack.installer.yaml
+++ b/manifests/e/Esko/CapePack/25.1.6/Esko.CapePack.installer.yaml
@@ -6,6 +6,9 @@ PackageIdentifier: Esko.CapePack
 PackageVersion: 25.1.6
 InstallerType: exe
 Scope: machine
+AppsAndFeaturesEntries:
+  - DisplayName: Cape Pack 25.03
+    Publisher: Esko Software BV
 Installers:
 - Architecture: x86
   InstallerUrl: https://cdn-my.esko.com/downloads/EskoSoftwarePlatform/2025-Q1-March/Cape/Cape%20Pack%2025.03_Build_P3_en.exe
