--- a/manifests/e/Esko/CapePack/25.1.6/Esko.CapePack.installer.yaml
+++ b/manifests/e/Esko/CapePack/25.1.6/Esko.CapePack.installer.yaml
@@ -14,57 +14,7 @@ Installers:
   InstallerUrl: https://cdn-my.esko.com/downloads/EskoSoftwarePlatform/2025-Q1-March/Cape/Cape%20Pack%2025.03_Build_P3_en.exe
   InstallerSha256: 09F0132483F0319DFEC524873AB3F10866C2BEF3CACED0A16A437EF6ECCF2F87
   InstallerSwitches:
-    Silent: /exenoui /qn /exelang 1033
-    SilentWithProgress: /exenoui /passive /exelang 1033
-  Language: en-US
-
-- Architecture: x86
-  InstallerUrl: https://cdn-my.esko.com/downloads/EskoSoftwarePlatform/2025-Q1-March/Cape/Cape%20Pack%2025.03_Build_P3_en.exe
-  InstallerSha256: 09F0132483F0319DFEC524873AB3F10866C2BEF3CACED0A16A437EF6ECCF2F87
-  InstallerSwitches:
-    Silent: /exenoui /qn /exelang 1036
-    SilentWithProgress: /exenoui /passive /exelang 1036
-  Language: fr-FR
-
-- Architecture: x86
-  InstallerUrl: https://cdn-my.esko.com/downloads/EskoSoftwarePlatform/2025-Q1-March/Cape/Cape%20Pack%2025.03_Build_P3_en.exe
-  InstallerSha256: 09F0132483F0319DFEC524873AB3F10866C2BEF3CACED0A16A437EF6ECCF2F87
-  InstallerSwitches:
-    Silent: /exenoui /qn /exelang 1031
-    SilentWithProgress: /exenoui /passive /exelang 1031
-  Language: de-DE
-
-- Architecture: x86
-  InstallerUrl: https://cdn-my.esko.com/downloads/EskoSoftwarePlatform/2025-Q1-March/Cape/Cape%20Pack%2025.03_Build_P3_en.exe
-  InstallerSha256: 09F0132483F0319DFEC524873AB3F10866C2BEF3CACED0A16A437EF6ECCF2F87
-  InstallerSwitches:
-    Silent: /exenoui /qn /exelang 1040
-    SilentWithProgress: /exenoui /passive /exelang 1040
-  Language: it-IT
-
-- Architecture: x86
-  InstallerUrl: https://cdn-my.esko.com/downloads/EskoSoftwarePlatform/2025-Q1-March/Cape/Cape%20Pack%2025.03_Build_P3_en.exe
-  InstallerSha256: 09F0132483F0319DFEC524873AB3F10866C2BEF3CACED0A16A437EF6ECCF2F87
-  InstallerSwitches:
-    Silent: /exenoui /qn /exelang 3082
-    SilentWithProgress: /exenoui /passive /exelang 3082
-  Language: es-ES
-
-- Architecture: x86
-  InstallerUrl: https://cdn-my.esko.com/downloads/EskoSoftwarePlatform/2025-Q1-March/Cape/Cape%20Pack%2025.03_Build_P3_en.exe
-  InstallerSha256: 09F0132483F0319DFEC524873AB3F10866C2BEF3CACED0A16A437EF6ECCF2F87
-  InstallerSwitches:
-    Silent: /exenoui /qn /exelang 1053
-    SilentWithProgress: /exenoui /passive /exelang 1053
-  Language: sv-SE
-
-- Architecture: x86
-  InstallerUrl: https://cdn-my.esko.com/downloads/EskoSoftwarePlatform/2025-Q1-March/Cape/Cape%20Pack%2025.03_Build_P3_en.exe
-  InstallerSha256: 09F0132483F0319DFEC524873AB3F10866C2BEF3CACED0A16A437EF6ECCF2F87
-  InstallerSwitches:
-    Silent: /exenoui /qn /exelang 2057
-    SilentWithProgress: /exenoui /passive /exelang 2057
-  Language: en-GB
-
+    Silent: /exenoui /qn
+    SilentWithProgress: /exenoui /passive
 ManifestType: installer
 ManifestVersion: 1.10.0
