--- a/manifests/h/Housatonic/ProjectViewer365/25.8.1280/Housatonic.ProjectViewer365.installer.yaml
+++ b/manifests/h/Housatonic/ProjectViewer365/25.8.1280/Housatonic.ProjectViewer365.installer.yaml
@@ -3,7 +3,7 @@
 
 PackageIdentifier: Housatonic.ProjectViewer365
 PackageVersion: 25.8.1280
-InstallerType: msi
+InstallerType: msi # InstallShield
 Scope: machine
 InstallerSwitches:
   InstallLocation: INSTALLDIR="<INSTALLPATH>"
