Remove nl-BE installer

--- a/manifests/a/ALTEC/QlickPrint/1.2/ALTEC.QlickPrint.installer.yaml
+++ b/manifests/a/ALTEC/QlickPrint/1.2/ALTEC.QlickPrint.installer.yaml
@@ -9,13 +9,8 @@ FileExtensions:
 - qpg
 ProductCode: QlickPrint_is1
 Installers:
-- InstallerLocale: nl-NL
-  Architecture: x86
+- Architecture: x86
   InstallerUrl: https://files.altec.nl/20241021104624/QlickPrint_Setup_NL.exe
-  InstallerSha256: 64AE07492EB6B73B92E36D90C90D89D6AFA4A55E5AB9C73A0F14B2EEFED2430D
-- InstallerLocale: nl-BE
-  Architecture: x86
-  InstallerUrl: https://files.altec.be/20250521111340/QlickPrint_Setup_BE.exe
   InstallerSha256: 64AE07492EB6B73B92E36D90C90D89D6AFA4A55E5AB9C73A0F14B2EEFED2430D
 ManifestType: installer
 ManifestVersion: 1.10.0
