--- a/manifests/a/ALTEC/QlickPrint/1.2/ALTEC.QlickPrint.installer.yaml
+++ b/manifests/a/ALTEC/QlickPrint/1.2/ALTEC.QlickPrint.installer.yaml
@@ -7,6 +7,9 @@ InstallerType: inno
 Scope: machine
 FileExtensions:
 - qpg
+Dependencies:
+  PackageDependencies:
+  - PackageIdentifier: Microsoft.VCRedist.2015+.x86
 ProductCode: QlickPrint_is1
 Installers:
 - Architecture: x86
