Add zh-CN installer

--- a/manifests/s/SeagullSoftware/BarTender/11.5.0.244440/SeagullSoftware.BarTender.installer.yaml
+++ b/manifests/s/SeagullSoftware/BarTender/11.5.0.244440/SeagullSoftware.BarTender.installer.yaml
@@ -61,5 +61,9 @@ Installers:
 - Architecture: x64
   InstallerUrl: https://d94r2itylgwnp.cloudfront.net/BarTender/11.5/BT11.5.0_244440_Full_x64.exe
   InstallerSha256: D1E01580F4EBEE70B4A250800B37D46F4DFFADE9FF2A7081FA3C347AA39E2ACC
+- InstallerLocale: zh-CN
+  Architecture: x64
+  InstallerUrl: https://downloads1.bartendersoftware.com.cn/BarTender/11.5/BT11.5.0_244440_Full_x64.exe
+  InstallerSha256: D1E01580F4EBEE70B4A250800B37D46F4DFFADE9FF2A7081FA3C347AA39E2ACC
 ManifestType: installer
 ManifestVersion: 1.10.0
