--- a/manifests/v/VaclavJedlicka/ProfiCAD/13.1.2/VaclavJedlicka.ProfiCAD.installer.yaml
+++ b/manifests/v/VaclavJedlicka/ProfiCAD/13.1.2/VaclavJedlicka.ProfiCAD.installer.yaml
@@ -8,6 +8,7 @@ Scope: machine
 FileExtensions:
 - sxe
 ProductCode: ProfiCAD_is1
+ReleaseDate: 2025-07-07
 Installers:
 - Architecture: x86
   InstallerUrl: https://www.proficad.com/down/13/setup_full.exe
