--- a/manifests/p/PuTTY/PuTTY/0.74.0.0/PuTTY.PuTTY.locale.en-US.yaml
+++ b/manifests/p/PuTTY/PuTTY/0.74.0.0/PuTTY.PuTTY.locale.en-US.yaml
@@ -10,7 +10,7 @@ PublisherSupportUrl: https://www.chiark.greenend.org.uk/~sgtatham/putty/feedback
 # PrivacyUrl: 
 Author: Simon Tatham
 PackageName: PuTTY
-PackageUrl: https://putty.org
+PackageUrl: https://www.chiark.greenend.org.uk/~sgtatham/putty
 License: MIT licence
 LicenseUrl: https://www.chiark.greenend.org.uk/~sgtatham/putty/licence.html
 Copyright: PuTTY is copyright 1997-2021 Simon Tatham.
