--- a/manifests/p/PuTTY/PuTTY/0.79.0.0/PuTTY.PuTTY.locale.en-US.yaml
+++ b/manifests/p/PuTTY/PuTTY/0.79.0.0/PuTTY.PuTTY.locale.en-US.yaml
@@ -9,7 +9,7 @@ PublisherUrl: https://www.chiark.greenend.org.uk
 PublisherSupportUrl: https://www.chiark.greenend.org.uk/~sgtatham/putty/feedback.html
 Author: Simon Tatham
 PackageName: PuTTY
-PackageUrl: https://putty.org
+PackageUrl: https://www.chiark.greenend.org.uk/~sgtatham/putty
 License: MIT licence
 LicenseUrl: https://www.chiark.greenend.org.uk/~sgtatham/putty/licence.html
 Copyright: PuTTY is copyright 1997-2021 Simon Tatham.
