--- a/manifests/m/M336/GDPSUpdater/1.0.0/M336.GDPSUpdater.locale.en-US.yaml
+++ b/manifests/m/M336/GDPSUpdater/1.0.0/M336.GDPSUpdater.locale.en-US.yaml
@@ -11,6 +11,9 @@ PackageName: GDPSUpdater
 PackageUrl: https://github.com/M336G/GDPS-Updater
 License: MPL-2.0
 ShortDescription: A simple cross-platform program to download and update one or multiple GDPS(s)!
+Moniker: gdpsupdater
+Tags:
+- gdps, updater, gd
 ReleaseNotesUrl: https://github.com/M336G/GDPS-Updater/releases/tag/v1.0.0
 Documentations:
 - DocumentLabel: Wiki
