--- a/manifests/m/M336/GDPSUpdater/1.0.0/M336.GDPSUpdater.locale.en-US.yaml
+++ b/manifests/m/M336/GDPSUpdater/1.0.0/M336.GDPSUpdater.locale.en-US.yaml
@@ -5,7 +5,7 @@ PackageIdentifier: M336.GDPSUpdater
 PackageVersion: 1.0.0
 PackageLocale: en-US
 Publisher: M336
-PublisherUrl: https://github.com/M336G
+PublisherUrl: https://m336.dev
 PublisherSupportUrl: https://github.com/M336G/GDPS-Updater/issues
 PackageName: GDPSUpdater
 PackageUrl: https://github.com/M336G/GDPS-Updater
